t+mi:[[kōmata o te rangi]] t+mi:[[kōmata (o te rangi)]] ([[WT:EDIT|Assisted]]) <zenith#33056175>

--- a/en/z/zenith.7223.wikitext
+++ b/en/z/zenith.7223.wikitext
@@ -72,6 +72,7 @@ From the {{etyl|enm|en}} {{m|enm|cenyth}}, from the {{etyl|ML.|en}} {{term|cenit
 * Latin: {{t|la|cenit|n}} {{qualifier|Mediaeval}}
 * Malay: {{t|ms|zenit}}
 * Manx: {{t|gv|ard-niau}}
+* Maori: {{t|mi|kōmata o te rangi}}
 * Middle English: {{t|enm|cenyth}}
 * Polish: {{t+|pl|zenit|m}}, {{t|pl|apogeum|n}}
 * Portuguese: {{t+|pt|zénite|m}} {{qualifier|Portugal}}, {{t+|pt|zênite|m}} {{qualifier|Brazil}}
@@ -98,7 +99,7 @@ From the {{etyl|enm|en}} {{m|enm|cenyth}}, from the {{etyl|ML.|en}} {{term|cenit
 * Japanese: {{t|ja|天頂|tr=てんちょう, tenchō}}
 * Malay: {{t|ms|zenit}}
 * Manx: {{t|gv|ard-niau}}
-* Maori: {{t|mi|kōmata}}
+* Maori: {{t|mi|kōmata}}, {{t|mi|kōmata (o te rangi)}}
 * Portuguese: {{t+|pt|zénite|m}} {{qualifier|Portugal}}, {{t+|pt|zênite|m}} {{qualifier|Brazil}}
 * Russian: {{t+|ru|зенит|m|tr=zenít}}
 {{trans-bottom}}
