--- a/en/z/zenith.7223.wikitext
+++ b/en/z/zenith.7223.wikitext
@@ -99,7 +99,7 @@ From the {{etyl|enm|en}} {{m|enm|cenyth}}, from the {{etyl|ML.|en}} {{term|cenit
 * Japanese: {{t|ja|天頂|tr=てんちょう, tenchō}}
 * Malay: {{t|ms|zenit}}
 * Manx: {{t|gv|ard-niau}}
-* Maori: {{t|mi|kōmata}}, {{t|mi|kōmata (o te rangi)}}
+* Maori: {{t|mi|[[kōmata]] ([[kōmata o te rangi|o te rangi]])}}
 * Portuguese: {{t+|pt|zénite|m}} {{qualifier|Portugal}}, {{t+|pt|zênite|m}} {{qualifier|Brazil}}
 * Russian: {{t+|ru|зенит|m|tr=zenít}}
 {{trans-bottom}}
