--- a/en/f/found.6885.wikitext
+++ b/en/f/found.6885.wikitext
@@ -76,8 +76,9 @@ From {{etyl|xno|en}} {{term|founder|lang=fro}} (French: {{term|fonder|lang=fr}})
 * Japanese: {{t|ja|基礎|alt=基礎を築く|tr=kiso wo kizuku}}
 * Khmer: {{t+|km|បង្កើត|tr=bɑŋkaət|sc=Khmr}}
 * Korean: {{t-needed|ko}}
-* Norwegian: {{t|no|grunnlegge}}
+* Ngazidja Comorian: {{t|zdj|tsenga|alt=utsenga}}
 {{trans-mid}}
+* Norwegian: {{t|no|grunnlegge}}
 * Old English: {{t|ang|astemnian}}, {{t|ang|gegrundweallian}}
 * Polish: {{t+|pl|budować}}, {{t+|pl|zbudować}}, {{t+|pl|tworzyć}}, {{t+|pl|stworzyć}}
 * Portuguese: {{t+|pt|fundar}}
