--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -150,6 +150,7 @@ The noun is from {{etyl|ang|en}} {{term|feoht|lang=ang}}, from the verb; compare
 {{trans-bottom}}
 
 {{trans-top|to strive for}}
+*Arabic: {{t+|ar|جهاد|tr=jehaad}}
 * Basque: {{t|eu|borrokatu}}, {{t|eu|borroka egin}}
 * Czech: {{t+|cs|bojovat}}
 * Dutch: {{t+|nl|opkomen}} {{t+|nl|voor}}, {{t+|nl|ijveren}} voor
