--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -17,7 +17,7 @@ Alternative etymology connects {{etyl|frk|-}} {{m|frk|*blund}} to {{etyl|gem-pro
 ===Noun===
 {{en-noun}}
 
-# A [[pale]] [[yellow]]ish ([[golden]] [[brown]]) [[color]], especially as a hair color.
+# A [[pale]] [[yellow]]ish ([[golden]] [[brown]]) [[color]], especially said of hair color.
 #: {{color panel|F8E8A7}}
 # A person with this hair color.
 
