--- a/en/f/find.6884.wikitext
+++ b/en/f/find.6884.wikitext
@@ -103,6 +103,7 @@ From {{etyl|enm|en}} {{term|finden|lang=enm}}, from {{etyl|ang|en}} {{term|finda
 * Chechen: {{t-needed|ce}}
 * Chinese:
 *: Mandarin: {{t+|cmn|找到|tr=zhǎodào|sc=Hani}}
+*: Min Nan: {{t+|nan|揣|tr=tshuē/tshē, chhoē/chhē|sc=Hani}}
 * Cimbrian: {{t|cim|bènnan}}
 * Crimean Tatar: {{t|crh|tapmaq}}
 * Czech: {{t|cs|nalézat|impf}}, {{t+|cs|nalézt|pf}}, {{t|cs|nacházet|impf}}, {{t+|cs|najít|pf}}
