--- a/en/c/choose.6832.wikitext
+++ b/en/c/choose.6832.wikitext
@@ -50,7 +50,7 @@ From {{etyl|enm|en}} {{m|enm|chosen}}, {{m|enm|chesen}}, from {{etyl|ang|en}} {{
 * Burmese: {{t+|my|ရွေး|sc=Mymr}}
 * Catalan: {{t+|ca|triar}}, {{t+|ca|escollir}}, {{t+|ca|elegir}}
 * Chinese:
-*: Cantonese: {{t|yue|揀|tr=gaan2|sc=Hani}}
+*: Cantonese: {{t|yue|揀|sc=Hani}}, {{t|yue|拣|tr=gaan2|sc=Hani}}
 *: Mandarin: {{t+|cmn|選擇|sc=Hani}}, {{t+|cmn|选择|tr=xuǎnzé|sc=Hani}}, {{t|cmn|挑選|sc=Hani}}, {{t+|cmn|挑选|tr=tiāoxuǎn|sc=Hani}}
 * Czech: {{t+|cs|volit|impf}}, {{t+|cs|zvolit|pf}}, {{t+|cs|vybírat|impf}}, {{t+|cs|vybrat|pf}}
 * Danish: {{t|da|vælge}}, {{t|da|udvælge}}, {{t|da|foretrække}}
