--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -67,7 +67,7 @@ From {{etyl|enm|en}} {{term|pullen|lang=enm}}, from {{etyl|ang|en}} {{term|pulli
 #* R. H. Lyttelton
 #*: Never '''pull''' a straight fast ball to leg.
 # {{context|UK|slang|lang=en}} To pour beer from a pump, keg, or other source.
-#: ''Let's stop at Finnigan's.  The barkeep '''pulls''' a good pint.''
+#: ''Let's stop at Finnigan's.  The barman '''pulls''' a good pint.''
 
 ====Synonyms====
 * {{sense|apply force to (something) so it comes toward}} [[drag]], [[tow]], [[tug]], [[yank]]
