/* Verb */ merge senses <pull#33078872>

--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -15,15 +15,15 @@ From {{etyl|enm|en}} {{term|pullen|lang=enm}}, from {{etyl|ang|en}} {{term|pulli
 ===Verb===
 {{en-verb}}
 
-# {{context|transitive|lang=en}} to apply a [[force]] to (an object) so that it comes [[toward]] the person or thing applying the force
+# {{context|transitive|intransitive|lang=en}} to apply a [[force]] to (an object) so that it comes [[toward]] the person or thing applying the force
+#: ''When I give the signal, '''pull''' the rope.''
+#: ''You're going to have to '''pull''' harder to get that cork out of the bottle.''
 #* Bible, Genesis viii. 9
 #*: He put forth his hand {{...}} and '''pulled''' her in.
 #* Shakespeare
 #*: Ne'er '''pull''' your hat upon your brows.
 # To gather with the hand, or by drawing toward oneself; to [[pluck]].
 #: ''to '''pull''' fruit from a tree; to '''pull''' flax; to '''pull''' a finch''
-# {{context|intransitive|lang=en}} to apply a force such that an object comes toward the person or thing applying the force
-#: ''You're going to have to '''pull''' harder to get that cork out of the bottle.''
 # To [[attract]] or [[net]]; to [[pull in]].
 #* Marcella Ridlen Ray, ''Changing and Unchanging Face of United States Civil Society''
 #*: Television, a favored source of news and information, '''pulls''' the largest share of advertising monies.
