--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -66,7 +66,7 @@ From {{etyl|enm|en}} {{term|pullen|lang=enm}}, from {{etyl|ang|en}} {{term|pulli
 # {{context|cricket|lang=en}} To strike the ball in a particular manner. (See noun sense.)
 #* R. H. Lyttelton
 #*: Never '''pull''' a straight fast ball to leg.
-# {{context|UK|lang=en}} To pour beer from a pump, keg, or other source.
+# {{context|UK|lang=en}} To draw beer from a pump, keg, or other source.
 #: ''Let's stop at Finnigan's.  The barman '''pulls''' a good pint.''
 
 ====Synonyms====
