--- a/en/v/vomit.8434.wikitext
+++ b/en/v/vomit.8434.wikitext
@@ -38,7 +38,7 @@ From {{etyl|enm|en}} {{term|vomiten|lang=enm}}, from {{etyl|la|en}} {{term|vomit
 * American Sign Language: {{t|ase|5@Mouth-5@FromUlnarTipFinger 5@FromMouth-5@FromUlnarTipFinger}}
 * Arabic: {{t|ar|تقيأ|tr=taqayyaʾa|sc=Arab}}, {{t|ar|قاء|tr=qāʾa|sc=Arab}}, {{t|ar|استفرغ|tr=istafraḡa|sc=Arab}}
 * Armenian: {{t|hy|հետ տալ}}, {{t+|hy|փսխել}}, {{t|hy|ործկալ}}
-* Aromanian: {{t|rup|vomu}}
+* Aromanian: {{t|rup|vom}}, {{t|rup|vomu}}
 * Asturian: {{t|ast|vomitar}}
 * Azeri: {{t+|az|qusmaq}}
 * Belarusian: {{t|be|ванітава́ць|impf|sc=Cyrl}}, {{t|be|блява́ць|impf|sc=Cyrl}}, {{t|be|рваць|impf|sc=Cyrl}} {{qualifier|impersonal}}, {{t|be|рыга́ць|impf|sc=Cyrl}}
@@ -55,6 +55,7 @@ From {{etyl|enm|en}} {{term|vomiten|lang=enm}}, from {{etyl|la|en}} {{term|vomit
 * Faroese: {{t|fo|spýggja}}
 * Finnish: {{t+|fi|oksentaa}}
 * French: {{t+|fr|vomir}}, {{t+|fr|rendre}}, {{t+|fr|rejeter}}, {{t+|fr|dégobiller}} {{qualifier|colloquial}}, {{t+|fr|dégueuler}} {{qualifier|slang}}, {{t+|fr|gerber}} {{qualifier|slang}}, {{t+|fr|quicher}} {{qualifier|slang}}
+* Friulian: {{t|fur|gomitâ}}
 * Galician: {{t+|gl|vomitar}}
 * Georgian: {{t+|ka|ღებინება|sc=Geor}}, {{t|ka|რწყევა|sc=Geor}}, {{t|ka|გულისრევა|sc=Geor}}
 * German: {{t+|de|übergeben|alt=sich übergeben}}, {{t+|de|erbrechen}}, {{t+|de|kotzen}}, {{t+|de|vomieren}}
@@ -93,7 +94,7 @@ From {{etyl|enm|en}} {{term|vomiten|lang=enm}}, from {{etyl|la|en}} {{term|vomit
 * Quechua: {{t|qu|aqtuy}}
 * Rapa Nui: {{t|rap|rua}}
 * Romanian: {{t+|ro|vomita}}, {{t+|ro|borî}}, {{t+|ro|vărsa}}
-* Romansch: {{t|rm|vomitar}}
+* Romansch: {{t|rm|render}}, {{t|rm|vomitar}}
 * Russian: {{t+|ru|блева́ть|impf|sc=Cyrl}}, {{t+|ru|рвать|impf|sc=Cyrl}} {{qualifier|impersonal}}, {{t+|ru|тошни́ть|impf|sc=Cyrl}} {{qualifier|impersonal, to feel sick}}, {{t+|ru|рыга́ть|impf|sc=Cyrl}}
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|ригати|impf|sc=Cyrl}}, {{t|sh|збљувати|pf|sc=Cyrl}}, {{t|sh|повратити|pf|sc=Cyrl}}, {{t|sh|бљувати|impf|sc=Cyrl}}, {{t|sh|повраћати|impf|sc=Cyrl}}, {{t|sh|ригати|impf}}
@@ -113,6 +114,7 @@ From {{etyl|enm|en}} {{term|vomiten|lang=enm}}, from {{etyl|la|en}} {{term|vomit
 * Turkmen: {{t|tk|gusmak}}
 * Ukrainian: {{t+|uk|блюва́ти|impf|sc=Cyrl}}, {{t|uk|рва́ти|impf|sc=Cyrl}} {{qualifier|impersonal}}, {{t|uk|рига́ти|impf|sc=Cyrl}}
 * Uzbek: {{t+|uz|qusmoq}}
+* Venetian: {{t|vec|gomitar}}, {{t|vec|vomegar}}, {{t|vec|rénder}}, {{t|vec|réndar}}, {{t|vec|riméter}}, {{t|vec|rimétar}}
 * Vietnamese: {{t+|vi|nôn}}, {{t+|vi|mửa}}
 {{trans-bottom}}
 
