--- a/en/v/vomit.8434.wikitext
+++ b/en/v/vomit.8434.wikitext
@@ -56,7 +56,7 @@ From {{etyl|enm|en}} {{term|vomiten|lang=enm}}, from {{etyl|la|en}} {{term|vomit
 * Faroese: {{t|fo|spýggja}}
 * Finnish: {{t+|fi|oksentaa}}
 * French: {{t+|fr|vomir}}, {{t+|fr|rendre}}, {{t+|fr|rejeter}}, {{t+|fr|dégobiller}} {{qualifier|colloquial}}, {{t+|fr|dégueuler}} {{qualifier|slang}}, {{t+|fr|gerber}} {{qualifier|slang}}, {{t+|fr|quicher}} {{qualifier|slang}}
-* Friulian: {{t|fur|gomitâ}}
+* Friulian: {{t|fur|gomitâ}}, {{t|fur|rindi}}, {{t|fur|restituî}}
 * Galician: {{t+|gl|vomitar}}
 * Georgian: {{t+|ka|ღებინება|sc=Geor}}, {{t|ka|რწყევა|sc=Geor}}, {{t|ka|გულისრევა|sc=Geor}}
 * German: {{t+|de|übergeben|alt=sich übergeben}}, {{t+|de|erbrechen}}, {{t+|de|kotzen}}, {{t+|de|vomieren}}
