--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -9,7 +9,7 @@
 * {{audio|En-us-Israel.ogg|Audio (US)|lang=en}}
 
 ===Etymology===
-From {{etyl|he|en}} {{term|יִשְׂרָאֵל||Israel|lang=he|tr=yisra'él}}, which, in Biblical Hebrew, means "he who wrestles with God" (a Biblical name for [[Jacob]] after he wrestles with an adversary).
+From {{etyl|he|en}} {{term|יִשְׂרָאֵל||Israel|lang=he|tr=yisra'él}}, which, in Biblical Hebrew, means "he who wrestles with God" (a Biblical name for [[Jacob]] after he wrestles with an adversary). The earliest attestation of the name (in any language) is in [[:File:YsyriAr.gif|line 27]] of the Ancient Egyptian [[w:Merneptah Stele|Merneptah Stele]] from about 1200 {{BCE}}.
 
 ===Proper noun===
 {{en-proper noun}}
