--- a/en/慘/慘.15724.wikitext
+++ b/en/慘/慘.15724.wikitext
@@ -4,9 +4,6 @@
 ===Han character===
 {{Han char|rn=61|rad=心|as=11|sn=14|four=9302<sub>2</sub>|canj=心戈戈竹 (PIIH)|ids=⿰[[忄]][[參]]}}
 
-# [[sad]], [[pitiful]], [[wretched]]
-# [[cruel]]
-
 ====References====
 * {{Han ref|kx=0398.380|dkj=11094|dj=0738.030|hdz=42348.110|uh=6158|ud=24920|bh=BA47|bd=47687}}
 
@@ -26,6 +23,12 @@
 |ma=
 |cat=a
 }}
+
+===Definitions===
+{{zh-hanzi}}
+
+# [[sad]], [[pitiful]], [[wretched]]
+# [[cruel]]
 
 ----
 
