--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -139,6 +139,7 @@ In its present use, "Germany" almost always refers to the [[Federal Republic of 
 * Cherokee: {{t+|chr|ᎠᏛᏥ|sc=Cher}}
 * Chinese:
 *: Mandarin: {{t+|cmn|德國|sc=Hani}}, {{t+|cmn|德国|tr=Déguó|sc=Hani}}, {{t+|cmn|德意志|tr=Déyìzhì|sc=Hani}}
+* Chuukese: {{t|chk|Toowis}}, {{t|chk|Ttooyis}}, {{t|chk|Séémén}}
 * Cornish: {{t+|kw|Almayn}}
 * Crimean Tatar: {{t|crh|Almaniya}}
 * Czech: {{t+|cs|Německo|n}}
