--- a/en/昆/昆.16942.wikitext
+++ b/en/昆/昆.16942.wikitext
@@ -46,7 +46,7 @@
 # [[descendants]], great-great-great-great grandchild
 
 ====Readings====
-* {{ja-readings|on=[[こん]] (kon)|kun=[[あに]] (ani)}}
+* {{ja-readings|goon=[[こん]] (kon)|kanon=[[こん]] (kon)|kun=[[あに]] (ani), [[なかま]] (nakama), むれ (mure)|nanori=[[ひ]] (hi), [[ひで]] (hide), [[やす]] (yasu)}}
 
 ====Compounds====
 {{der-top3|Compounds}}
