--- a/en/坙/坙.13020.wikitext
+++ b/en/坙/坙.13020.wikitext
@@ -3,26 +3,34 @@
 ===Han character===
 {{Han char|rn=32|rad=土|as=04|sn=7|four=|canj=一女女土 (MVVG)|ids=⿳[[一]][[巛]][[土]]}}
 
+====References====
+* {{Han ref|kx=0226.101|dkj=04962|hdz=10422.120|uh=5759|ud=22361}}
+
+----
+
+==Chinese==
+{{zh-forms}}
+
+===Pronunciation===
+{{zh-pron
+|m=jīng
+|m_note=Corrupted form of [[巠]]
+|c=ging1
+|mc=
+|oc=
+|ma=
+|cat=n,v
+}}
+
+===Definitions===
 # [[stream]]s [[running]] [[underground]]
 # [[flowing]] [[water]]
 # (classical variant of [[經]]) [[classic]] [[work]]s
 # [[pass through]]
 
 ====References====
-* {{Han ref|kx=0226.101|dkj=04962|hdz=10422.120|uh=5759|ud=22361}}
+*(''Cantonese'') [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 1), p. 86]
 *[http://chardb.iis.sinica.edu.tw/char/9050 International Encoded Han Character and Variants Database]
-
-----
-
-==Cantonese==
-
-===Hanzi===
-{{yue-hanzi|jyut=[[ging1]]|y=ging1}}
-
-# {{defn|lang=yue|sort=土04}}
-
-====References====
-* [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 1), p. 86]
 
 ----
 
@@ -35,15 +43,6 @@
 
 ====Readings====
 * {{ja-readings|on=[[けい]] (kei)|kun=}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[jīng]] ([[jing1]])|wg=ching<sup>1</sup>}}
-
-# {{defn|lang=cmn|sort=土04}}
 
 [[fr:坙]]
 [[hu:坙]]
