--- a/en/坋/坋.13006.wikitext
+++ b/en/坋/坋.13006.wikitext
@@ -1,4 +1,5 @@
 ==Translingual==
+{{Han etyl}}
 
 ===Han character===
 {{Han char|rn=32|rad=土|as=04|sn=7|four=4812<sub>7</sub>|canj=土金尸竹 (GCSH)|ids=⿰[[土]][[分]]}}
