--- a/en/垣/垣.13095.wikitext
+++ b/en/垣/垣.13095.wikitext
@@ -1,7 +1,8 @@
 ==Translingual==
+{{Han etyl}}
 
 ===Han character===
-{{Han char|rn=32|rad=土|as=06|sn=9|four=4111<sub>6</sub>|canj=土一日一 (GMAM)|ids=⿰[[土]][[亘]]}}
+{{Han char|rn=32|rad=土|as=06|sn=9|four=4111<sub>6</sub>|canj=土一日一 (GMAM)|ids=⿰土亘}}
 
 # [[low]] [[wall]]
 
