--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -98,6 +98,8 @@ The phrase "dream come true" is a set phrase; the verb "come" in the sense "beco
 
 The collocations “[[come with]]” and “[[come along]]” mean {{term|accompany|lang=en}}, used as “Do you want to come with me?” and “Do you want to come along?” In the Midwestern American dialect, “come with” can occur without a following object, as in “Do you want to come with?” In this dialect, “with” can also be used in this way with some other verbs, such as “take with”. Examples of this may be found in plays by Chicagoan {{w|David Mamet}}, such as ''{{w|American Buffalo}}.''<ref>[http://positiveanymore.blogspot.com/2006/04/chicago-dialect.html Chicago Dialect]</ref> This objectless use is not permissible in other dialects.
 
+The meaning of ''to ejaculate'' is considered rude slang. Many style guides and editors recommend the spelling ''come'' for verb uses while strictly allowing the spelling ''[[cum]]'' for the noun. Both spellings are sometimes found in either the noun or verb sense, however. Others prefer to distinguish in formality, using ''come'' for any formal usage and ''cum'' only in slang, erotic or pornographic contexts.<ref>[http://www.glossophilia.org/?p=4925 Glossophilia]</ref>
+
 ====Antonyms====
 * {{l|en|leave}}, {{l|en|go}}
 
@@ -355,6 +357,10 @@ The collocations “[[come with]]” and “[[come along]]” mean {{term|accomp
 #* '''1869''', RD Blackmoore, ''Lorna Doone'', II:
 #*: “If we count three before the '''come''' of thee, thwacked thou art, and must go to the women.”
 # {{context|slang|lang=en}} [[semen|Semen]], or female [[ejaculatory]] [[discharge]].
+
+====Usage notes====
+
+The meaning of ''semen or female ejaculatory discharge'' is considered rude slang. Many style guides and editors recommend the spelling ''come'' for verb uses while strictly allowing the spelling ''[[cum]]'' for the noun. Both spellings are sometimes found in either the noun or verb sense, however. Others prefer to distinguish in formality, using ''come'' for any formal usage and ''cum'' only in slang, erotic or pornographic contexts.<ref>[http://www.glossophilia.org/?p=4925 Glossophilia]</ref>
 
 ====See also====
 * [[cum]]
