--- a/en/坙/坙.13020.wikitext
+++ b/en/坙/坙.13020.wikitext
@@ -9,28 +9,7 @@
 ----
 
 ==Chinese==
-{{zh-forms}}
-
-===Pronunciation===
-{{zh-pron
-|m=jīng
-|m_note=Corrupted form of [[巠]]
-|c=ging1
-|mc=
-|oc=
-|ma=
-|cat=n,v
-}}
-
-===Definitions===
-# [[stream]]s [[running]] [[underground]]
-# [[flowing]] [[water]]
-# (classical variant of [[經]]) [[classic]] [[work]]s
-# [[pass through]]
-
-====References====
-*(''Cantonese'') [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 1), p. 86]
-*[http://chardb.iis.sinica.edu.tw/char/9050 International Encoded Han Character and Variants Database]
+{{zh-see|巠|v}}
 
 ----
 
