--- a/en/星/星.16967.wikitext
+++ b/en/星/星.16967.wikitext
@@ -42,6 +42,7 @@
 * {{sense|star, celebrity}} {{zh-l|明星}}
 
 ====Compounds====
+{{attention|needs conversion to Traditional}}
 {{top3}}
 * {{l|zh|星期|tr=xīngqī|gloss=days of the week}}
 * {{l|zh|星期一|tr=xīngqīyī|gloss=Monday}}
@@ -89,7 +90,7 @@
 * {{l|zh|海星}}
 {{bottom}}
 
-[[Category:zh:Astronomy|xing1]]
+{{zh-cat|Astronomy}}
 
 ----
 
