--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -86,7 +86,7 @@ The noun is from {{etyl|ang|en}} {{term|feoht|lang=ang}}, from the verb; compare
 * Galician: {{t|gl|loitar}}
 * Georgian: {{t|ka|ბრძოლა}}, {{t|ka|შებრძოლება}}
 * German: {{t+|de|kämpfen}}, {{t+|de|fechten}}, {{t+|de|streiten}} {{qualifier|archaic}}
-* Greek: {{t+|el|πάλη|tr=páli|sc=Grek}}
+* Greek: 
 *: Ancient Greek: {{t|grc|μάχομαι}}
 * Hebrew: {{t+|he|רב|tr=rav}}, {{t+|he|נאבק|tr=ne'evák}}, {{t+|he|נלחם|tr=nilkhám}}
 * Hindi: {{t|hi|लड़ना|tr=laṛnā|sc=Deva}}, {{t|hi|झगड़ना|sc=Deva}}
