--- a/en/旸/旸.16928.wikitext
+++ b/en/旸/旸.16928.wikitext
@@ -2,12 +2,10 @@
 ==Translingual==
 
 ===Etymology===
-{{Han simp|暘|f=昜|t=丿丿𠄎}}
+{{Han simp|暘|f=昜|t=𠃓}}
 
 ===Han character===
-{{Han char|rn=72|rad=日|as=03|sn=7|four=|canj=日弓尸竹 (ANSH)}}
-
-# {{defn|Han|sort=日03}}
+{{Han char|rn=72|rad=日|as=03|sn=7|four=|canj=ANSH}}
 
 ====References====
 * {{Han ref|kx=0490.221|hdz=21488.010|uh=65F8|ud=26104}}
