--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -3,6 +3,7 @@
 {{slim-wikipedia}}
 
 ===Etymology===
+{{PIE root|en|gʷem}}
 From {{etyl|enm|en}} {{term|comen|lang=enm}}, {{term|cumen|lang=enm}}, from {{etyl|ang|en}} {{term|coman|lang=ang}}, {{term|cuman||to come, go, happen|lang=ang}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*kwemaną||to come}}, from {{etyl|ine-pro|en}} {{m|ine-pro|*gʷem-}}, {{m|ine-pro|*gʷém-}}, {{m|ine-pro|*gʷem-ye-||to come, go, be born}}.
 {{rel-top|cognates}}
 Cognate from Proto-Germanic with {{etyl|sco|-}} {{term|cum||to come|lang=sco}}, {{etyl|stq|-}} {{term|kuume||to come|lang=stq}}, {{etyl|fy|-}} {{term|komme||to come|lang=fy}}, {{etyl|nds|-}} {{term|kamen||to come|lang=nds}}, {{etyl|nl|-}} {{term|komen||to come|lang=nl}}, {{etyl|de|-}} {{term|kommen||to come|lang=de}}, {{etyl|da|-}} {{term|komme||to come|lang=da}}, {{etyl|sv|-}} {{term|komma||to come|lang=sv}}, {{etyl|is|-}} {{term|koma||to come|lang=is}}.
