--- a/en/倲/倲.11064.wikitext
+++ b/en/倲/倲.11064.wikitext
@@ -3,7 +3,10 @@
 ===Han character===
 {{Han char|rn=9|rad=人|as=08|sn=10|four=|canj=人木田 (ODW)|ids=⿰[[亻]][[東]]}}
 
-# {{defn|Han|sort=人08}}
+# [[rude]]
+# [[barbarous]], [[stupid]]
+# [[dull]]
+# [[last name]]
 
 ====References====
 * {{Han ref|kx=0109.110|dkj=00801|dj=0232.090|hdz=10172.040|uh=5032|ud=20530}}
