--- a/en/明/明.16950.wikitext
+++ b/en/明/明.16950.wikitext
@@ -44,51 +44,48 @@ The traditional etymology follows the modern form in finding {{liushu|ic}}: {{te
 # [[tomorrow]]
 # [[next]], [[following]]
 # [[w:Ming Dynasty|Ming Dynasty]]
-# ''a [[surname]]'', listed as #111 on the ''[[:w:Baijiaxing|Baijiaxing]]''
-# ''a (usually masculine) [[given name]]'', sometimes used as a generic Chinese male name, like [[John]].
+# {{surname|lang=zh|dot=,}} listed as #111 on the ''[[:w:Baijiaxing|Baijiaxing]]''
+# {{given name|usually masculine|lang=zh}}, sometimes used as a generic Chinese male name, like [[John]].
 
 ====Compounds====
-{{top2}}
-* [[明暗]]
-* [[明白]]
-* [[明白人]]
-* [[明灿灿]]
-* [[明察]]
-* [[明察暗访]]
-* [[明察秋毫]]
-* [[明达]]
-* [[明灯]]
-* [[明断]]
-* [[明矾]]
-* [[明光]]
-* [[明光光]]，[[明光光的]]
-* [[明光瓦亮]]
-* [[明火]]
-* [[明洁]]
-* [[明净]]
-{{mid2}}
-* [[明静]]
-* [[明镜]]
-* [[明朗]]
-* [[明亮]]
-* [[明明]]
-* [[明年]]
-* [[明枪暗箭]]
-* [[明抢]]
-* [[明确]]
-* [[明儿]]
-* [[明日]]
-* [[明锐]]
-* [[明闪闪]]，[[明闪闪的]]
-* [[明升暗降]]
-* [[明显]]
-* [[明星]]
-* [[明天]]
-{{bottom}}
-
-====Phrases====
-* [[明槍易躲，暗箭難防]] ([[明枪易躲，暗箭难防]])
-* [[明目張膽]] ([[明目张胆]])
+{{der3
+| {{zh-l|明暗}}
+| {{zh-l|明白}}
+| {{zh-l|明白人}}
+| {{zh-l|明燦燦}}
+| {{zh-l|明察}}
+| {{zh-l|明察暗訪}}
+| {{zh-l|明察秋毫}}
+| {{zh-l|明達}}
+| {{zh-l|明燈}}
+| {{zh-l|明斷}}
+| {{zh-l|明礬}}
+| {{zh-l|明光}}
+| {{zh-l|明光光}}
+| {{zh-l|明光瓦亮}}
+| {{zh-l|明火}}
+| {{zh-l|明潔}}
+| {{zh-l|明凈}}
+| {{zh-l|明靜}}
+| {{zh-l|明鏡}}
+| {{zh-l|明朗}}
+| {{zh-l|明亮}}
+| {{zh-l|明明}}
+| {{zh-l|明年}}
+| {{zh-l|明槍暗箭}}
+| {{zh-l|明搶}}
+| {{zh-l|明確}}
+| {{zh-l|明兒}}
+| {{zh-l|明日}}
+| {{zh-l|明銳}}
+| {{zh-l|明閃閃}}
+| {{zh-l|明升暗降}}
+| {{zh-l|明顯}}
+| {{zh-l|明星}}
+| {{zh-l|明天}}
+| {{zh-l|明槍易躲，暗箭難防}}
+| {{zh-l|明目張膽}}
+}}
 
 ----
 
