t+fa:[[بلوند]] ([[WT:EDIT|Assisted]]) <blond#33288553>

--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -54,6 +54,7 @@ Alternative etymology connects {{etyl|frk|-}} {{m|frk|*blund}} to {{etyl|gem-pro
 * Latvian: {{t|lv|gaišmatis|m}}, {{t|lv|gaišmate|f}}, {{t|lv|blondīns|m}}, {{t|lv|blondīne|f}}
 * Macedonian: {{t|mk|русокос|m|tr=rúsokos}}, {{t|mk|плав|m|tr=plav}}, {{t|mk|русокоса|f|tr=rusókosa}}, {{t|mk|плава|f|tr=pláva}}
 * Norwegian: {{t|no|lys(håret)}}, blond, {{t+|no|blondine}}
+* Persian: {{t+|fa|بلوند|tr=blond|sc=fa-Arab}}
 * Polish: {{t+|pl|blondyn|m}}, {{t+|pl|blondynka|f}}
 * Portuguese: {{t|pt|loiro|m}}, {{t|pt|louro|m}}
 * Punjabi: {{t|pa|ਕੱਕਾ|m|tr=kakkā|sc=Guru}}
