Welsh translation: ac yn y blaen <et cetera#33345692>

--- a/en/e/et cetera.7211.wikitext
+++ b/en/e/et cetera.7211.wikitext
@@ -85,6 +85,7 @@ From {{etyl|la|en}} {{term|et cētera||lang=la|and the rest" or "and so forth}}.
 * Ukrainian: {{t|uk|і так да́лі|sc=Cyrl}}
 * Urdu: {{t|ur|وغیرہ|tr=vaġairah|sc=ur-Arab}}
 * Vietnamese: {{t+|vi|vân vân}}, {{t+|vi|v.v.}}
+* Welsh: {{t|cy|ac yn y blaen}}
 * Yiddish: {{t|yi|און אַזוי ווײַטער|sc=Hebr}}
 {{trans-bottom}}
 
