--- a/en/昔/昔.16956.wikitext
+++ b/en/昔/昔.16956.wikitext
@@ -1,5 +1,9 @@
 ==Translingual==
 
+===Etymology===
+{{Han etyl}}
+Two pieces of flesh ([[仌]]) left to dry in the sun ([[日]]).
+
 ===Han character===
 {{Han char|rn=72|rad=日|as=04|sn=8|four=4460<sub>1</sub>|canj=廿日 (TA)|ids=⿱[[龷]][[日]]}}
 
