/* Chinese */ the taiwan character variant dictionary really serves as an excellent character dictionary by itself <健#33348769>

--- a/en/健/健.11125.wikitext
+++ b/en/健/健.11125.wikitext
@@ -32,13 +32,23 @@
 |w=
 |mc=y
 |oc=y
-|cat=a
+|cat=adj,adv,pn
 }}
 
-===Definitions===
-{{zh-hanzi}}
+===Adjective===
+{{zh-adj}}
 
-# {{rfdef|lang=zh}}
+# [[strong]], [[vigourous]]
+# [[healthy]]
+#: {{zh-usex|健康|health; healthy; sound}}
+
+===Adverb===
+{{zh-adv}}
+
+# [[adeptly]], [[energetically]]
+#: {{zh-usex|健步如飛|}}
+#: {{zh-usex|健談|}}
+#: {{zh-usex|老 來 多 健 忘||CL|ref='''Tang Dynasty''', 白居易, 偶作寄朗之}}
 
 ===Compounds===
 {{attention|zh|needs conversion to traditional}}
@@ -65,6 +75,16 @@
 | [[健在]]
 | [[健壮]]
 }}
+
+===Proper noun===
+{{zh-proper noun}}
+
+# {{surname|lang=zh}}
+
+===References===
+* {{R:twedu|A00208}}
+* [http://www.zdic.net/z/15/js/5065.htm zdic.net (Han Dian)]
+* [http://yedict.com/htm/50/5065.htm yedict.com (叶典)]
 
 ----
 
