--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -363,7 +363,7 @@ Named from {{etyl|pt|en}} [[Oporto]], a city in [[Portugal]] from whence the win
 ===Noun===
 {{sq-noun|m|porte|porti|portet}}
 
-# [[port]]
+# [[port]], [[harbor]]
 
 ----
 
