/* Derived terms */ <count#33352891>

--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -36,8 +36,9 @@ From {{etyl|enm|en}} {{term|counten|lang=enm}}, from {{etyl|xno|en}} {{term|cont
 =====Derived terms=====
 {{rel-top|Terms derived from ''count'' (verb)}}
 * [[count one's blessings]]
-{{rel-mid}}
 * [[count out]]
+{{rel-mid}}
+* [[count to ten]]
 {{rel-bottom}}
 
 =====Related terms=====
