--- a/en/側/側.11140.wikitext
+++ b/en/側/側.11140.wikitext
@@ -33,7 +33,7 @@
 {{ja-kanji|grade=4|rs=人09}}
 
 ====Readings====
-* {{ja-readings|on=[[そく]] ([[soku]]), [[しょく]] ([[shoku]])|kun=[[かわ]] ([[kawa]]), [[かたわら]] ([[側ら]], [[katawara]]), [[そばめる]] ([[側める]], [[sobameru]])}}
+* {{ja-readings|goon=[[しき]] (shiki)|kanyoon=[[そく]] ([[soku]])|kanon=[[しょく]] ([[shoku]])|kun=[[かわ]] ([[kawa]]), [[かたわら]] ([[側ら]], [[katawara]]), [[そばめる]] ([[側める]], [[sobameru]])}}
 
 ====Compounds====
 * [[側圧]]
