--- a/en/傑/傑.11170.wikitext
+++ b/en/傑/傑.11170.wikitext
@@ -6,6 +6,7 @@
 
 # [[hero]]
 # [[outstanding]], [[remarkable]]
+# ''A (typically male) [[given name]]''
 
 ====References====
 * {{Han ref|kx=0113.090|dkj=00955|dj=0240.150|hdz=10204.050|uh=5091|ud=20625|bh=B3C7|bd=46023}}
