removed [[Category:en:Olives and allies]]; added [[Category:en:Olive family plants]] using [[Help:Gadget-HotCat|HotCat]] <olive#33356778>

--- a/en/o/olive.4769.wikitext
+++ b/en/o/olive.4769.wikitext
@@ -251,7 +251,7 @@
 [[Category:en:Colors]]
 [[Category:en:Fruits]]
 [[Category:en:Greens]]
-[[Category:en:Olives and allies]]
+[[Category:en:Olive family plants]]
 
 ----
 
