--- a/en/坡/坡.13028.wikitext
+++ b/en/坡/坡.13028.wikitext
@@ -28,7 +28,7 @@
 # {{defn|lang=ja|sort=土05}}
 
 ====Readings====
-* {{ja-readings|on=[[は]] (ha), [[ひ]] (hi)|kun=[[つつみ]] (tsutsumi)}}
+* {{ja-readings|goon=[[は]] (ha)|on=[[ひ]] (hi)|kun=[[つつみ]] (tsutsumi)}}
 
 ----
 
