--- a/en/倫/倫.11047.wikitext
+++ b/en/倫/倫.11047.wikitext
@@ -38,7 +38,7 @@
 # {{defn|lang=ja|sort=人08}}
 
 ====Readings====
-* {{ja-readings|on=[[りん]] (rin)|kun=[[たぐい]] (tagui), [[ついで]] (tsuide), [[みち]] (michi)}}
+* {{ja-readings|goon=[[りん]] (rin)|kanon=[[りん]] (rin)|kun=[[たぐい]] (tagui), [[ついで]] (tsuide), [[みち]] (michi)}}
 
 ===Proper noun===
 {{ja-pos|k|proper|hira=りん|rom=Rin}}
