t+ko:[[희곡]] t-balance t+ja:[[戯曲]] ([[WT:EDIT|Assisted]]) <play#33386278>

--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -537,10 +537,10 @@ The noun is from {{etyl|enm|en}} {{term|pleye|lang=enm}}, from {{etyl|ang|en}} {
 * Indonesian: {{t+|id|pentas}}, {{t+|id|drama}}
 * Irish: {{t|ga|dráma|m}}
 * Italian: {{t+|it|dramma|m}}
-* Japanese: {{t+|ja|演劇|tr=えんげき, engeki|sc=Jpan}}
-* Korean: {{t+|ko|연극|sc=Kore}}
-{{trans-mid}}
+* Japanese: {{t+|ja|演劇|tr=えんげき, engeki|sc=Jpan}}, {{t|ja|戯曲|tr=ぎきょく, gikyoku|sc=Jpan}}
+* Korean: {{t+|ko|연극|sc=Kore}}, {{t+|ko|희곡|sc=Kore}}
 * Kurdish: {{t+|ku|şano|f}}, {{t+|ku|piyes|f}}, {{t+|ku|tiyatro|f}}
+{{trans-mid}}
 * Latin: {{t+|la|fabula|f}}
 * Macedonian: {{t|mk|представа|f|tr=prédstava}}
 * Malayalam: {{t+|ml|നാടകം|tr=naatakam}}
