moved definitions from "Translingual" section to "Chinese" section <偉#33420634>

--- a/en/偉/偉.11097.wikitext
+++ b/en/偉/偉.11097.wikitext
@@ -7,9 +7,6 @@
 ===Han character===
 {{Han char|rn=9|rad=人|as=09|sn=12|four=2425<sub>6</sub>|canj=人木一手 (ODMQ)|ids=⿰[[亻]][[韋]]}}
 
-# [[great]], [[robust]]
-# [[extraordinary]]
-
 ====Descendants====
 * [[伟]]
 
@@ -25,17 +22,16 @@
 {{zh-pron
 |m=wěi
 |c=wai5
-|h=
 |mn=uí
-|w=
 |mc=y
 |oc=y
 |ma=
-|cat=adj
+|cat=a
 }}
 
-===Adjective===
-{{zh-pron|t}}
+===Definitions===
+# [[great]], [[robust]]
+# [[extraordinary]]
 
 ====Compounds====
 * (''Min Nan'') [[偉大]] (uí-tāi)
