--- a/en/愷/愷.15690.wikitext
+++ b/en/愷/愷.15690.wikitext
@@ -31,7 +31,9 @@
 ===Kanji===
 {{ja-kanji|grade=|rs=心10}}
 
-# {{defn|lang=ja|sort=心10}}
+# [[enjoy]]
+# be contented
+# [[joyful]]
 
 ====Readings====
 * {{ja-readings|on=[[かい]] (kai), [[がい]] (gai)|kun=[[たのしむ]] (tanoshimu)}}
