--- a/en/愷/愷.15690.wikitext
+++ b/en/愷/愷.15690.wikitext
@@ -45,7 +45,9 @@
 ===Hanja===
 {{ko-hanja|hangeul=개|eumhun=|rv=gae|mr=kae|y=kay}}
 
-# {{defn|lang=ko|sort=心10}}
+# [[peaceful]]
+# [[enjoy]]
+# [[ease up]]
 
 ----
 
