--- a/en/側/側.11140.wikitext
+++ b/en/側/側.11140.wikitext
@@ -4,9 +4,6 @@
 ===Han character===
 {{Han char|rn=9|rad=人|as=09|sn=11|four=2220<sub>0</sub>|canj=人月金弓 (OBCN)|ids=⿰[[亻]][[則]]}}
 
-# [[side]]
-# [[incline]], [[slant]], [[lean]]
-
 ====References====
 * {{Han ref|kx=0111.340|dkj=00897|dj=0238.060|hdz=10189.120|uh=5074|ud=20596|bh=B0BC|bd=45244}}
 
@@ -24,6 +21,10 @@
 |ma=
 |cat=a
 }}
+
+===Definitions===
+# [[side]]
+# [[incline]], [[slant]], [[lean]]
 
 ----
 
