--- a/en/c/curtain.7391.wikitext
+++ b/en/c/curtain.7391.wikitext
@@ -92,7 +92,7 @@ From {{etyl|fro|en}} {{term|cortine|lang=fro}}, from {{etyl|la|en}} {{term|corti
 * Latvian: {{t|lv|aizkars|m}}
 * Lithuanian: {{t|lt|užuolaida|f}}
 * Luxembourgish: {{t|lb|Rido|f}}
-* Macedonian: {{t|mk|завеса|f|tr=závesa}}, {{t|mk|перде|n|tr=pérde}}
+* Macedonian: {{t|mk|завеса|f}}, {{t|mk|перде|n}}
 {{trans-mid}}
 * Malay: {{t|ms|tirai}}, {{t|ms|tabir}}
 * Maltese: {{t|mt|purtiera|f}}
@@ -126,7 +126,7 @@ From {{etyl|fro|en}} {{term|cortine|lang=fro}}, from {{etyl|la|en}} {{term|corti
 * Swedish: {{t+|sv|gardin|c}}
 * Tajik: {{t|tg|парда|sc=Cyrl}}
 * Tamil: {{t-needed|ta}}
-* Telugu: {{t+|te|తెర|tr=tera}}
+* Telugu: {{t+|te|తెర}}
 * Thai: {{t|th|ผ้าม่าน|tr=pâa-mâan|sc=Thai}}
 * Turkish: {{t+|tr|perde}}
 * Turkmen: {{t|tk|perde}}, {{t|tk|tuty}}
