--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -2,7 +2,7 @@
 ==English==
 
 ===Etymology===
-From {{etyl|enm|en}} {{term|cutten|lang=enm}}, {{term|kitten|lang=enm}}, {{term|kytten|lang=enm}}, {{term|ketten|lang=enm}}, {{gloss|"to cut"; compare {{etyl|sco|-}} {{term|kut|lang=sco}}, {{term|kit||to cut|lang=sco}}}},  from {{etyl|gem-pro|en}} {{m|gem-pro|*kutjaną}}, {{m|gem-pro|*kuttaną||to cut}}, of uncertain origin, perhaps related to {{etyl|gem-pro|en}} {{m|gem-pro|*kwetwą}} {{gloss|"meat, flesh"; > Old Norse {{etyl|non|-}} {{term|kvett||meat|lang=non}}}}. Akin to Middle {{etyl|sv|-}} {{term|kotta|lang=sv}} {{gloss|"to cut or carve with a knife"; > Swedish dialectal {{term|kåta|lang=sv}}, {{term|kuta||to cut or chip with a knife|lang=sv}}, Swedish {{term|kuta|lang=sv}}, {{term|kytti||a knife|lang=sv}}}}, {{etyl|no|-}} {{term|kutte||to cut|lang=no}}, {{etyl|is|-}} {{term|kuta||to cut with a knife|lang=is}}, {{etyl|non|-}} {{term|kuti||small knife|lang=non}}, {{etyl|no|-}} {{term|kyttel|lang=no}}, {{term|kytel|lang=no}}, {{term|kjutul||pointed slip of wood used to strip bark|lang=no}}.
+From {{etyl|enm|en}} {{m|enm|cutten}}, {{m|enm|kitten}}, {{m|enm|kytten}}, {{m|enm|ketten}}, {{gloss|"to cut"; compare {{etyl|sco|-}} {{m|sco|kut}}, {{m|sco|kit||to cut}}}},  from {{etyl|gem-pro|en}} {{m|gem-pro|*kutjaną}}, {{m|gem-pro|*kuttaną||to cut}}, of uncertain origin, perhaps related to {{etyl|gem-pro|en}} {{m|gem-pro|*kwetwą}} {{gloss|"meat, flesh"; > {{etyl|non|-}} {{m|non|kvett||meat}}}}. Akin to Middle {{etyl|sv|-}} {{m|sv|kotta}} {{gloss|"to cut or carve with a knife"; > Swedish dialectal {{m|sv|kåta}}, {{m|sv|kuta||to cut or chip with a knife}}, {{etyl|sv|-}} {{m|sv|kuta}}, {{m|sv|kytti||a knife}}}}, {{etyl|no|-}} {{m|no|kutte||to cut}}, {{etyl|is|-}} {{m|is|kuta||to cut with a knife}}, {{etyl|non|-}} {{m|non|kuti||small knife}}, {{etyl|no|-}} {{m|no|kyttel}}, {{m|no|kytel}}, {{m|no|kjutul||pointed slip of wood used to strip bark}}.
 
 ===Pronunciation===
 * {{IPA|/kʌt/|lang=en}}
@@ -57,7 +57,7 @@ From {{etyl|enm|en}} {{term|cutten|lang=enm}}, {{term|kitten|lang=enm}}, {{term|
 * Old Saxon: {{t|osx|gisnidan}}
 * Portuguese: {{t|pt|cortado}}
 * Romanian: {{t+|ro|tăiat}}
-* Russian: {{t+|ru|ре́заный|sc=Cyrl|tr=rézanyj}}, {{t|ru|наре́заный|sc=Cyrl|tr=narézanyj}}, {{t|ru|поре́заный|sc=Cyrl|tr=porézanyj}}, {{t|ru|разре́заный|sc=Cyrl|tr=razrézanyj}}
+* Russian: {{t+|ru|ре́заный|sc=Cyrl}}, {{t|ru|наре́заный|sc=Cyrl}}, {{t|ru|поре́заный|sc=Cyrl}}, {{t|ru|разре́заный|sc=Cyrl}}
 * Spanish: {{t+|es|cortado}}
 * Swedish: {{t+|sv|klippt}}, {{t+|sv|skuren}}
 * Turkish: {{t+|tr|kesik}}
@@ -72,7 +72,7 @@ From {{etyl|enm|en}} {{term|cutten|lang=enm}}, {{term|kitten|lang=enm}}, {{term|
 {{trans-mid}}
 * Italian: {{t+|it|ridotto}}, {{t+|it|tagliato}}, {{t|it|accorciato}}, {{t|it|ritagliato|m}}, {{t+|it|potato|m}}
 * Portuguese: {{t+|pt|reduzido}}
-* Russian: {{t|ru|уре́заный|sc=Cyrl|tr=urézanyj}}
+* Russian: {{t|ru|уре́заный|sc=Cyrl}}
 {{trans-bottom}}
 
 {{trans-top|of a gem, carved into a shape}}
@@ -84,7 +84,7 @@ From {{etyl|enm|en}} {{term|cutten|lang=enm}}, {{term|kitten|lang=enm}}, {{term|
 {{trans-mid}}
 * Italian: {{t+|it|tagliato}}
 * Portuguese: {{t|pt|lapidado}}
-* Russian: {{t|ru|огранённый|sc=Cyrl|tr=ogranjónnyj}}
+* Russian: {{t|ru|огранённый|sc=Cyrl}}
 * Spanish: {{t+|es|tallado}}
 {{trans-bottom}}
 
@@ -104,7 +104,7 @@ From {{etyl|enm|en}} {{term|cutten|lang=enm}}, {{term|kitten|lang=enm}}, {{term|
 * Italian: {{t|it|circonciso|m}}
 {{trans-mid}}
 * Portuguese: {{t|pt|circuncidado}}
-* Russian: {{t|ru|обре́заный|sc=Cyrl|tr=obrézanyj}}
+* Russian: {{t|ru|обре́заный|sc=Cyrl}}
 * Spanish: {{t|es|circuncidado}}
 {{trans-bottom}}
 
@@ -207,7 +207,7 @@ From {{etyl|enm|en}} {{term|cutten|lang=enm}}, {{term|kitten|lang=enm}}, {{term|
 * Maori: {{t|mi|motunga}}
 * Portuguese: {{t+|pt|corte|m}}
 * Romanian: {{t|ro|tăietură|f}}, {{t|ro|incizie|f}}
-* Russian: {{t+|ru|поре́з|m|sc=Cyrl|tr=poréz}} ''wound'', {{t+|ru|разре́з|m|sc=Cyrl|tr=razréz}}
+* Russian: {{t+|ru|поре́з|m|sc=Cyrl}} ''wound'', {{t+|ru|разре́з|m|sc=Cyrl}}
 * Scottish Gaelic: {{t|gd|gearradh|m}}
 * Spanish: {{t+|es|corte|m}}
 * Sundanese: {{t|su|raheut}}
@@ -233,7 +233,7 @@ From {{etyl|enm|en}} {{term|cutten|lang=enm}}, {{term|kitten|lang=enm}}, {{term|
 * Norwegian: {{t|no|kutt|n}}
 * Portuguese: {{t+|pt|corte|m}}
 * Romanian: {{t|ro|tăiere|f}}
-* Russian: {{t+|ru|ре́зание|n|sc=Cyrl|tr=rézanije}}
+* Russian: {{t+|ru|ре́зание|n|sc=Cyrl}}
 * Scottish Gaelic: {{t|gd|gearradh|m}}
 * Spanish: {{t+|es|corte|m}}
 * Swedish: {{t+|sv|snitt|n}}
@@ -289,7 +289,7 @@ From {{etyl|enm|en}} {{term|cutten|lang=enm}}, {{term|kitten|lang=enm}}, {{term|
 * Icelandic: {{t+|is|snið|n}}
 * Italian: {{t+|it|taglia|f}}, {{t+|it|taglio|m}}
 * Portuguese: {{t+|pt|corte|m}}
-* Russian: {{t+|ru|покро́й|m|sc=Cyrl|tr=pokrój}}
+* Russian: {{t+|ru|покро́й|m|sc=Cyrl}}
 * Spanish: {{t+|es|corte|m}}
 * Swedish: {{t|sv|skärning|c}}, {{t+|sv|snitt|n}}
 * Turkish: {{t+|tr|kesim}}
@@ -334,7 +334,7 @@ From {{etyl|enm|en}} {{term|cutten|lang=enm}}, {{term|kitten|lang=enm}}, {{term|
 
 {{checktrans-top}}
 * Romanian: {{t-check|ro|tăietură}}
-* {{ttbc|te}}: [[కోత]] (kOta), [[గాటు]] (gaaTu)
+* {{ttbc|te}}: {{t-check|te|కోత}}, {{t-check|te|గాటు}}
 {{trans-bottom}}
 
 ===Verb===
@@ -524,11 +524,11 @@ From {{etyl|enm|en}} {{term|cutten|lang=enm}}, {{term|kitten|lang=enm}}, {{term|
 * Norman: {{t|nrf|coper}}
 * Khmer: {{t+|km|កាត់|tr=kat|sc=Khmr}}
 * Korean: {{t+|ko|끊다|sc=Kore}}
-* Lao: {{t|lo|ຕັດ|tr= tát|sc=Laoo}}
+* Lao: {{t|lo|ຕັດ|sc=Laoo}}
 * Latin: {{t|la|inseco}}, {{t|la|incido}}
 {{trans-mid}}
 * Latvian: {{t+|lv|griezt}}
-* Macedonian: {{t|mk|се́че|impf|sc=Cyrl}}, {{t|mk|ре́же|impf|sc=Cyrl}}
+* Macedonian: {{t|mk|сече|impf|sc=Cyrl}}, {{t|mk|реже|impf|sc=Cyrl}}
 * Neapolitan: {{t|nap|taglià}}
 * Occitan: {{t+|oc|talhar}}
 * Persian: {{t+|fa|بریدن|tr=boridan}}
@@ -569,7 +569,7 @@ From {{etyl|enm|en}} {{term|cutten|lang=enm}}, {{term|kitten|lang=enm}}, {{term|
 * Armenian: {{t|hy|կտրատել}}
 * Bengali: {{t|bn|কাটা|sc=Beng}}
 * Bulgarian: {{t+|bg|режа}}, {{t+|bg|сека}}, {{t+|bg|разсичам}}
-* Burmese: {{t+|my|ညှပ်|tr=hnyap|sc=Mymr}}
+* Burmese: {{t+|my|ညှပ်|sc=Mymr}}
 * Catalan: {{t+|ca|tallar}}
 * Chinese:
 *: Mandarin: {{t+|cmn|切|tr=qiē|sc=Hani}}
@@ -759,7 +759,7 @@ From {{etyl|enm|en}} {{term|cutten|lang=enm}}, {{term|kitten|lang=enm}}, {{term|
 * Indonesian: {{t-check|id|potong}}, {{t-check|id|kerat}}, {{t-check|id|iris}}, {{t-check|id|memotong}}
 * Romanian: {{t-check|ro|croi}}
 * Serbo-Croatian: {{qualifier|1,2,3,7,8}} {{t-check|sh|iseći}}, {{qualifier|5}} {{t-check|sh|rez}}, {{qualifier|6}} {{t-check|sh|spustiti}}, {{qualifier|6}} {{t-check|sh|sniziti}}, {{qualifier|10}} {{t-check|sh|pobeći}}
-* Telugu: {{t-check|te|కోయు|tr=kOyu|sc=Telu}} (1,2), {{t-check|te|తెంచు|tr=teMchu|sc=Telu}} (3), {{t-check|te|కోత వేయు|tr=kOta vEyu|sc=Telu}} (6), {{t-check|te|ఖండించుకొను|tr=khaMDiMchukonu|sc=Telu}} (8)
+* Telugu: {{t-check|te|కోయు|sc=Telu}} (1,2), {{t-check|te|తెంచు|sc=Telu}} (3), {{t-check|te|కోత వేయు|sc=Telu}} (6), {{t-check|te|ఖండించుకొను|sc=Telu}} (8)
 {{trans-bottom}}
 
 ====See also====
