--- a/en/傖/傖.11177.wikitext
+++ b/en/傖/傖.11177.wikitext
@@ -4,8 +4,6 @@
 ===Han character===
 {{Han char|rn=9|rad=人|as=10|sn=12|four=2826<sub>7</sub>|canj=人人戈口 (OOIR)|ids=⿰[[亻]][[倉]]}}
 
-# [[vulgar]] [[person]], [[country]] [[man]]
-
 ====References====
 * {{Han ref|kx=0113.180|dkj=00964|dj=0241.080|hdz=10204.020|uh=5096|ud=20630|bh=B3C9|bd=46025}}
 
@@ -23,6 +21,9 @@
 |ma=
 |cat=n
 }}
+
+===Definitions===
+# [[vulgar]] [[person]], [[country]] [[man]]
 
 ----
 
