--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -95,7 +95,7 @@ From {{etyl|fr|en}} {{term|France|lang=fr}}, {{etyl|fro|en}} {{term|France|lang=
 * Icelandic: {{t+|is|Frakkland|n}}
 * Ido: {{t+|io|Francia}}
 * Indonesian: {{t+|id|Perancis}}, {{t+|id|Prancis}}
-* Ilocano : {{Pransia}}
+* Ilocano : {{t|ilo|Pransia}}
 * Interlingua: {{t|ia|Francia}}
 * Interlingue: {{t|ie|Francia}}
 * Irish: {{t+|ga|Frainc|alt=an Fhrainc|f}}
