--- a/en/n/New Zealand.2106.wikitext
+++ b/en/n/New Zealand.2106.wikitext
@@ -23,7 +23,7 @@ As there is no adjective derived from New Zealand, it is also used in the attrib
 {{trans-top|country in Oceania}}
 * Afrikaans: {{t|af|Nieu-Seeland}}
 * Albanian: {{t|sq|Zelanda e Re}}
-* Arabic: {{t|ar|نْيُوزِيلَانْدَا|f|tr=nyuzilandā}}
+* Arabic: {{t|ar|نْيُوزِيلَانْدَا|f|tr=nyūzīlandā}}, {{t|ar|نْيُوزِيلَانْدَا جَدِيدَة|f|tr=zīlandā jadīda}}
 * Armenian: {{t|hy|Նոր Զելանդիա}}
 * Asturian: {{t+|ast|Nueva Zelanda|f}}
 * Azeri: {{t|az|Yeni Zelandiya}}
