--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -1,6 +1,6 @@
 {{also|Butter}}
 ==English==
-[[Image:NCI butter.jpg|thumb|right|250 px|Butter {{gloss|food made of cream}} [[stick]] with a butter [[knife]].]]
+[[Image:NCI butter.jpg|thumb|right|250 px|A stick of butter {{gloss|food made of cream}} with a butter [[knife]].]]
 {{wikipedia}}
 
 ===Pronunciation===
