--- a/en/坭/坭.13040.wikitext
+++ b/en/坭/坭.13040.wikitext
@@ -1,22 +1,39 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=32|rad=土|as=05|sn=8|four=4711<sub>1</sub>|canj=土尸心 (GSP)|ids=⿰[[土]][[尼]]}}
+{{Han char|rn=32|rad=土|as=05|sn=8|four=47111|canj=GSP|ids=⿰土尼}}
 
 # [[mud]], [[mire]]
 # to [[paste]], to [[plaster]]
 
 ====References====
-* {{Han ref|kx=0226.260|dkj=04981|dj=0462.030|hdz=10435.100|uh=576D|ud=22381|bh=CBF4|bd=52212}}
+* {{Han ref|kx=0226.260|dkj=04981|dj=0462.030|hdz=10435.100|uh=576D}}
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=|y=nai4}}
+===Pronunciation===
+{{zh-pron
+|m=Ní
+|c=nai4
+|h=pfs=
+|md=
+|mn=
+|w=
+|mc=y
+|oc=y
+|cat=pn
+}}
 
-# {{defn|lang=yue|sort=土05}}
+===Definitions===
+{{zh-hanzi}}
+
+# {{n-g|Used in place names.}}
+
+===References===
+* {{R:twedu|B00506}}
 
 ----
 
@@ -29,15 +46,6 @@
 
 ====Readings====
 * {{ja-readings|on=[[でい]] (dei), [[ない]] (nai), [[で]] (de), [[に]] (ni)|kun=[[どろ]] (doro)}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[ní]] ([[ni2]])|wg=ni<sup>2</sup>}}
-
-# {{defn|lang=cmn|sort=土05}}
 
 ----
 
