--- a/en/坭/坭.13040.wikitext
+++ b/en/坭/坭.13040.wikitext
@@ -14,7 +14,9 @@
 ==Chinese==
 {{zh-forms}}
 
-===Pronunciation===
+===Etymology 1===
+
+====Pronunciation====
 {{zh-pron
 |m=Ní
 |c=nai4
@@ -27,10 +29,13 @@
 |cat=pn
 }}
 
-===Definitions===
+====Definitions====
 {{zh-hanzi}}
 
 # {{n-g|Used in place names.}}
+
+===Etymology 2===
+{{zh-see|泥|v}}
 
 ===References===
 * {{R:twedu|B00506}}
