--- a/en/坻/坻.13054.wikitext
+++ b/en/坻/坻.13054.wikitext
@@ -40,7 +40,7 @@
 ==Korean==
 
 ===Hanja===
-{{ko-hanja|hangeul=지|rv=ji|mr=chi}}
+{{ko-hanja|hangeul=[[지]], [[저]]|rv=ji, jeo|y=ci, ce|mr=chi, chŏ}}
 
 # [[sandbank]]
 # [[shore]]
