--- a/en/f/find.6884.wikitext
+++ b/en/f/find.6884.wikitext
@@ -15,9 +15,9 @@ From {{etyl|enm|en}} {{term|finden|lang=enm}}, from {{etyl|ang|en}} {{term|finda
 {{en-verb|finds|finding|found|past2=fand|past2_qual=dialectal|found|past_ptc2=founden|past_ptc2_qual=archaic}}
 
 # {{context|transitive|lang=en}} To encounter or discover by accident; to happen upon.
-#* Shakespeare
+#* {{rfdate|and other bibliographic particulars}} {{w|Shakespeare}}
 #*: Searching the window for a flint, I '''found''' / This paper, thus sealed up.
-#* Cowley
+#* {{rfdate|and other bibliographic particulars}} {{w|Cowley}}
 #*: In woods and forests thou art '''found'''.
 # {{context|transitive|lang=en}} To [[encounter]] or [[discover]] something being [[search]]ed for; to [[locate]].
 #: {{usex|lang=en|I '''found''' my car keys. They were under the couch.}}
@@ -37,9 +37,9 @@ From {{etyl|enm|en}} {{term|finden|lang=enm}}, from {{etyl|ang|en}} {{term|finda
 #: {{usex|lang=en|He kept '''finding''' faults with my work.}}
 # {{context|transitive|lang=en}} To decide that, to discover that, to form the [[opinion]] that.
 #: {{usex|lang=en|I '''find''' your argument unsatisfactory.}}
-#* Shakespeare
+#* {{rfdate|and other bibliographic particulars}} {{w|Shakespeare}}
 #*: I '''find''' you passing gentle.
-#* Cowley
+#* {{rfdate|and other bibliographic particulars}} {{w|Cowley}}
 #*: The torrid zone is now '''found''' habitable.
 #* {{quote-book|year=1922|author={{w|Ben Travers}}|title={{w|A Cuckoo in the Nest}}
 |chapter=1|url=http://openlibrary.org/works/OL1521052W
@@ -48,7 +48,7 @@ From {{etyl|enm|en}} {{term|finden|lang=enm}}, from {{etyl|ang|en}} {{term|finda
 #: {{usex|lang=en|The jury '''finds''' for the defendant.}}
 # {{context|transitive|lang=en}} To arrive at, as a conclusion; to determine as true; to establish.
 #: ''to '''find''' a verdict; to '''find''' a true bill (of indictment) against an accused person''
-#* Shakespeare
+#* {{rfdate|and other bibliographic particulars}} {{w|Shakespeare}}
 #*: to '''find''' his title with some shows of truth
 # To discover by study or experiment direct to an object or end.
 #: ''Water is '''found''' to be a compound substance.''
@@ -60,9 +60,9 @@ From {{etyl|enm|en}} {{term|finden|lang=enm}}, from {{etyl|ang|en}} {{term|finda
 # {{context|archaic|lang=en}} To provide for; to supply; to furnish.
 #: ''to '''find''' food for workmen''
 #: ''He '''finds''' his nephew in money.''
-#* ''London Times''
+#* {{rfdate|and other bibliographic particulars}} ''{{w|London Times}}''
 #*: Wages £14 and all '''found'''.
-#* Charles Dickens
+#* {{rfdate|and other bibliographic particulars}} {{w|Charles Dickens}}
 #*: Nothing a day and '''find''' yourself.
 # {{cx|intransitive|hunting|lang=en}} To discover game.
 #*'''1945''', {{w|Nancy Mitford}}, ''The Pursuit of Love'', Penguin 2010, p. 57:
