--- a/en/f/find.6884.wikitext
+++ b/en/f/find.6884.wikitext
@@ -53,8 +53,7 @@ From {{etyl|enm|en}} {{term|finden|lang=enm}}, from {{etyl|ang|en}} {{term|finda
 # {{lb|en|transitive}} To gain, as the object of desire or effort.
 #: ''to '''find''' leisure; to '''find''' means''
 # {{lb|en|transitive}} To attain to; to arrive at; to acquire.
-#: ''Looks like he '''found''' himself a new vehicle!''
-#: ''After a long flight, I now '''find''' myself in San Francisco.''
+#: ''Looks like he '''found''' a new vehicle for himself!''
 # {{lb|en|transitive|archaic}} To supply; to furnish.
 #: ''to '''find''' food for workmen''
 # {{lb|en|transitive|archaic}} To provide for
