--- a/en/昌/昌.16948.wikitext
+++ b/en/昌/昌.16948.wikitext
@@ -39,8 +39,8 @@
 ===Kanji===
 {{ja-kanji|grade=|rs=日04}}
 
-# [[good]]
-# florishing
+# good
+# prosper
 
 ====Readings====
 * {{ja-readings|on=[[しょう]] (shō)|kun=[[さかん]] (sakan)|nanori=[[まさ]] (masa), [[あき]] (aki)}}
