--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -82,10 +82,10 @@ Compare {{etyl|ae|-}} {{term|𐬌𐬭𐬌𐬏𐬙||lang=ae|tr=tūiri|curdled mil
 |[[butter-fingers]], [[butterfingers]]
 |[[butter-fish]], [[butterfish]]
 |[[butter-flip]]
-|[[butter-flower]]
+|[[butter-flower]]<!-- the origin of "butterfly" is uncertain, and so is given under "Related terms" instead-->
 |[[butter icing]]
 |[[butterie]]
-|[[butterine]]
+|[[butterine]]<!--"butteriness" is given under "buttery" -->
 |[[butterish]]
 |[[butter-jags]]
 |[[butter knife]], [[butter-knife]]
