--- a/en/f/flesh.6883.wikitext
+++ b/en/f/flesh.6883.wikitext
@@ -284,7 +284,7 @@ From {{etyl|enm|en}} {{m|enm|flesh}}, from {{etyl|ang|en}} {{m|ang|flǣsc}}, fro
 ==Middle English==
 
 ===Etymology===
-See {{term|flesh|lang=en}}.
+From {{etyl|ang|enm}} {{m|ang|flǣsc}}, from {{etyl|gem-pro|enm}} {{m|gem-pro|*flaiską}}, from {{etyl|ine-pro|enm}} {{m|ine-pro|*pleh₁ḱ-||to tear, peel off}}.
 
 ===Alternative forms===
 * [[flech]], [[fleesh]], [[fleisch]], [[fleish]], [[flesch]], [[flessh]]
@@ -295,7 +295,7 @@ See {{term|flesh|lang=en}}.
 # [[#English|flesh]], [[meat]]
 
 ====Descendants====
-* English: [[#English|flesh]]
+* English: {{l|en|flesh}}
 
 [[cs:flesh]]
 [[cy:flesh]]
