/* Verb */ To [[manipulate]] or [[deceive]] someone. <play#33656277>

--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -89,6 +89,8 @@ The noun is from {{etyl|enm|en}} {{term|pleye|lang=enm}}, from {{etyl|ang|en}} {
 # {{lb|en|transitive}} To put in action or motion.
 #: {{ux|en|to '''play''' cannon upon a fortification;&emsp; {{nowrap|to '''play''' a trump in a card game}}}}
 # {{lb|en|transitive}} To keep in play, as a [[hook]]ed [[fish]], in order to [[land]] it.
+# {{lb|en|transitive}} To [[manipulate]] or [[deceive]] someone.
+#: {{ux|en|You '''played''' me!}}
 
 ====Translations====
 {{trans-top|act in a manner such that one has fun}}
