--- a/en/f/float.8440.wikitext
+++ b/en/f/float.8440.wikitext
@@ -94,6 +94,7 @@ From {{etyl|enm|en}} {{m|enm|floten}}, from {{etyl|ang|en}} {{m|ang|flotian||to 
 * Telugu: {{t+|te|తేలు}}
 * Turkish: {{t-needed|tr}}
 * Vietnamese: {{t+|vi|nổi}}
+* Waray: {{t+|war|lu-taw}}
 {{trans-bottom}}
 
 {{trans-top|to be capable of floating}}
