--- a/en/坎/坎.13009.wikitext
+++ b/en/坎/坎.13009.wikitext
@@ -53,6 +53,12 @@
 
 ----
 
+==Middle Chinese==
+===Han character===
+'''坎''' (*kǒm)<!--note: asterisk indicates that this character appears more than four times in the Tang Dynasty corpus of literature-->
+
+----
+
 ==Vietnamese==
 
 ===Han character===
