t+ka:[[ჩხუბი]] ([[WT:EDIT|Assisted]]) <fight#33678155>

--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -84,7 +84,7 @@ The noun is from {{etyl|ang|en}} {{term|feoht|lang=ang}}, from the verb; compare
 * Finnish: (''without weapons'') {{t|fi|tapella}}, (''with weapons'') {{t+|fi|taistella}}
 * French: {{t+|fr|se battre}}, {{t+|fr|guerroyer}} ''in war''
 * Galician: {{t|gl|loitar}}
-* Georgian: {{t|ka|ბრძოლა}}, {{t|ka|შებრძოლება}}
+* Georgian: {{t|ka|ბრძოლა}}, {{t|ka|შებრძოლება}}, {{t|ka|ჩხუბი}}
 * German: {{t+|de|kämpfen}}, {{t+|de|fechten}}, {{t+|de|streiten}} {{qualifier|archaic}}
 * Greek: 
 *: Ancient Greek: {{t|grc|μάχομαι}}
