--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -200,6 +200,7 @@ The noun is from {{etyl|ang|en}} {{term|feoht|lang=ang}}, from the verb; compare
 * Finnish: {{t+|fi|taistella}}
 * French: {{t+|fr|combattre}}
 * Galician: {{t|gl|combatir}}
+* Georgian: {{t|ka|შებრძოლება}}, {{t|ka|შერკინება}}
 * German: {{t+|de|kämpfen}}
 * Greek: {{t+|el|πολεμώ}}
 * Hebrew: {{t+|he|נאבק|tr=ne'evák}}, {{t+|he|נלחם|tr=nilkhám}}
