t+tr:[[tepe]] ([[WT:EDIT|Assisted]]) <zenith#33694617>

--- a/en/z/zenith.7223.wikitext
+++ b/en/z/zenith.7223.wikitext
@@ -103,7 +103,7 @@ From the {{etyl|enm|en}} {{m|enm|cenyth}}, from the {{etyl|ML.|en}} {{term|cenit
 * Maori: {{t|mi|[[kōmata]] ([[kōmata o te rangi|o te rangi]])}}
 * Portuguese: {{t+|pt|zénite|m}} {{qualifier|Portugal}}, {{t+|pt|zênite|m}} {{qualifier|Brazil}}
 * Russian: {{t+|ru|зени́т|m}}
-* Turkish: {{t+|tr|zenit}}, {{t+|tr|zirve}}, {{t+|tr|doruk}}
+* Turkish: {{t+|tr|zenit}}, {{t+|tr|zirve}}, {{t+|tr|doruk}}, {{t+|tr|tepe}}
 {{trans-bottom}}
 
 {{trans-top|highest point or state; peak}}
