--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -15,7 +15,7 @@
 * {{hyphenation|but|ter|lang=en}}
 
 ===Etymology 1===
-From {{etyl|enm|en}}, from {{etyl|ang|en}} {{term|butere||butter|lang=ang}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*buterô||butter}} (compare {{etyl|fy|-}} {{term|buter|lang=fy}}, {{etyl|nl|-}} {{term|boter|lang=nl}}, {{etyl|de|-}} {{term|Butter|lang=de}}), from {{etyl|la|en}} {{term|būtȳrum|lang=la}}, from {{etyl|grc|en}} {{term|βούτυρον|βούτῡρον|lang=grc|cow cheese}}, compound of {{term|sc=polytonic|βοῦς|lang=grc||ox, cow}} and {{term|sc=polytonic|τυρός|τῡρός|cheese}}, from {{etyl|xsc|en}}.
+From {{etyl|enm|en}}, from {{etyl|ang|en}} {{term|butere||butter|lang=ang}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*buterǭ||butter}} (compare {{etyl|fy|-}} {{term|buter|lang=fy}}, {{etyl|nl|-}} {{term|boter|lang=nl}}, {{etyl|de|-}} {{term|Butter|lang=de}}), from {{etyl|la|en}} {{term|būtȳrum|lang=la}}, from {{etyl|grc|en}} {{term|βούτυρον|βούτῡρον|lang=grc|cow cheese}}, compound of {{term|sc=polytonic|βοῦς|lang=grc||ox, cow}} and {{term|sc=polytonic|τυρός|τῡρός|cheese}}, from {{etyl|xsc|en}}.
 
 Compare {{etyl|ae|-}} {{term|𐬌𐬭𐬌𐬏𐬙||lang=ae|tr=tūiri|curdled milk, whey}}), from {{etyl|ine-pro|en}} {{m|ine-pro|*tuHrós}} (compare [[Middle Indic]] {{term|||tr=tūra|cheese|lang=und}}, {{etyl|ru|-}} {{term|творо́г||curds, soft cheese|lang=ru}}, {{etyl|ang|-}} {{term|lang=ang|þweran||to churn}}, {{term|geþweor||curds|lang=ang}}).
 
