--- a/en/明/明.16950.wikitext
+++ b/en/明/明.16950.wikitext
@@ -43,6 +43,9 @@ The traditional etymology follows the modern form in finding {{liushu|ic}}: {{te
 # [[clear]]
 # [[tomorrow]]
 # [[next]], [[following]]
+# to understand
+#: {{zh-l|講明|to explain}}
+#: {{zh-usex|如果{gwo2} 你 唔 明 就 要{jiu3} 講被 我 聼。|If you don't '''understand''' then you have to tell me.|C}}
 # [[w:Ming Dynasty|Ming Dynasty]]
 # {{surname|lang=zh|dot=,}} listed as #111 on the ''[[:w:Baijiaxing|Baijiaxing]]''
 # {{given name|usually masculine|lang=zh}}, sometimes used as a generic Chinese male name, like [[John]].
