--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -19,19 +19,18 @@ From {{etyl|he|en}} {{term|יִשְׂרָאֵל||Israel|lang=he|tr=yisra'él}}, 
 # {{context|historical|lang=en}} A nation that occupied roughly the same area in ancient times.
 # {{context|historical|lang=en}} An ancient [[kingdom]] that occupied the northern part of this area, as distinct from [[Judah]].
 # The [[Jew]]s, taken collectively.
-# {{context|biblical|lang=en}} A name given to [[Jacob]] (Genesis 32:28).
+# {{given name|male|from=Hebrew}}, notably borne by [[Jacob]] (after Genesis 32:28).
 #* {{RQ:Authorized Version|Genesis|32|28}}
 #*: And he said, Thy name shall be called no more Jacob, but '''Israel''': for as a prince hast thou power with God and with men, and hast prevailed.
-# {{given name|male|from=Hebrew}}.
+
+====Usage notes====
+* {{sense|region}} {{U:en:I-P}}
 
 ====Synonyms====
 * {{sense|State of Israel}} the Jewish State, the State of Israel
 * {{sense|Land of Israel}} [[Canaan]], the [[Holy Land]], the Land of Israel, the [[Levant]], [[Palestine]]
 * {{sense|ancient kingdom}} [[Ephraim]]
 * {{sense|the Jews}} the Children of Israel
-
-====Usage notes====
-* {{sense|Land of Israel}} The use of the name {{term||Israel|lang=en}} to refer to the region is sometimes seen as politically or emotionally charged; indeed, this is true of all terms for this region.
 
 ====Derived terms====
 * [[Israeli]]
