--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -9,7 +9,14 @@
 * {{audio|En-us-Israel.ogg|Audio (US)|lang=en}}
 
 ===Etymology===
-From {{etyl|he|en}} {{term|יִשְׂרָאֵל||Israel|lang=he|tr=yisra'él}}, which, in Biblical Hebrew, means "he who wrestles with God" (a Biblical name for [[Jacob]] after he wrestles with an adversary). The earliest attestation of the name (in any language) is in [[:File:YsyriAr.gif|line 27]] of the Ancient Egyptian [[w:Merneptah Stele|Merneptah Stele]] from about 1200 {{B.C.E.}}, where it appeared as [[ysri3r]].
+From {{etyl|he|en}} {{term|יִשְׂרָאֵל||Israel|lang=he|tr=yisra'él}}, from {{etyl|egy|en}} {{m|egy|ysri3r}}.
+
+There are many proposed etymologies for this word.
+
+In the biblical account, the etymology is given as "he who wrestles with God" (a Biblical name for [[Jacob]] after he wrestles with an adversary).
+
+The earliest attestation of the name (in any language) is in [[:File:YsyriAr.gif|line 27]] of the Ancient Egyptian [[w:Merneptah Stele|Merneptah Stele]] from about 1200 {{B.C.E.}}, where it appeared as:
+<hiero>i-i-z:Z4:r-i-A-r:Z1*T14-A1*B1:Z2</hiero>
 
 ===Proper noun===
 {{en-proper noun}}
