--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -9,12 +9,10 @@
 * {{audio|En-us-Israel.ogg|Audio (US)|lang=en}}
 
 ===Etymology===
-From {{etyl|he|en}} {{term|יִשְׂרָאֵל||Israel|lang=he|tr=yisra'él}}.
-
-In the biblical account, the etymology is given as "he who wrestles with God" (a Biblical name for [[Jacob]] after he wrestles with an adversary).
-
-The earliest attestation of the name (in any language) is in [[:File:YsyriAr.gif|line 27]] of the Ancient Egyptian [[w:Merneptah Stele|Merneptah Stele]] from about 1200 {{B.C.E.}}, where it appeared as {{l|egy|ysri3r}}, and in hieroglyphics as:
-<hiero>i-i-z:Z4:r-i-A-r:Z1*T14-A1*B1:Z2</hiero>
+From {{etyl|he|en}} {{term|יִשְׂרָאֵל||Israel|lang=he|tr=yisra'él}}. Possible origins:
+* From {{m|he|[[יִשְׂרֶה]] [[אֵל]]||he wrestled [with] God|tr=yisré 'él}}, as given in {{RQ:Tanach|1|32|29}}.
+* From {{etyl|egy|en}} {{m|egy|ysrj3r}}, the earliest attestation in any language of what is likely the name ''Israel'', in [[:File:YsyriAr.gif|line 27]] of the [[w:Merneptah Stele|Merneptah Stele]] from about 1200 {{B.C.E.}} (alternatively, the Egyptian term could have been borrowed from the Hebrew):
+*: <hiero>i-i-z:Z4:r-i-A-r:Z1*T14-A1*B1:Z2</hiero>
 
 ===Proper noun===
 {{en-proper noun}}
