--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -9,10 +9,10 @@
 * {{audio|En-us-Israel.ogg|Audio (US)|lang=en}}
 
 ===Etymology===
-From {{etyl|he|en}} {{term|יִשְׂרָאֵל||Israel|lang=he|tr=yisra'él}}. Possible origins:
-* From {{m|he|[[יִשְׂרֶה]] [[אֵל]]||he wrestled [with] God|tr=yisré 'él}}, as given in {{RQ:Tanach|1|32|29}}.
-* From {{etyl|egy|en}} {{m|egy|ysrj3r}}, the earliest attestation in any language of what is likely the name ''Israel'', in [[:File:YsyriAr.gif|line 27]] of the [[w:Merneptah Stele|Merneptah Stele]] from about 1200 {{B.C.E.}} (alternatively, the Egyptian term could have been borrowed from the Hebrew):
-*: <hiero>i-i-z:Z4:r-i-A-r:Z1*T14-A1*B1:Z2</hiero>
+From {{etyl|he|en}} {{term|יִשְׂרָאֵל||Israel|lang=he|tr=yisra'él}}. In {{RQ:Tanach|1|32|29}}, it is said to derive from {{m|he|[[יִשְׂרֶה]] [[אֵל]]||he wrestled [with] God|tr=yisré 'él}}. 
+
+[[:File:YsyriAr.gif|Line 27]] of the [[w:Merneptah Stele|Merneptah Stele]] (from about 1200 {{B.C.E.}}) is thought to contain the earliest attestation of the name ''Israel'' in any language, {{etyl|egy|-}} {{m|egy|ysrj3r}} (although alternative readings have been proposed, such as ''[[Jezreel]]''):
+: <hiero>i-i-z:Z4:r-i-A-r:Z1*T14-A1*B1:Z2</hiero>
 
 ===Proper noun===
 {{en-proper noun}}
