--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -9,7 +9,7 @@
 * {{audio|En-us-Israel.ogg|Audio (US)|lang=en}}
 
 ===Etymology===
-From {{etyl|enm|en}} {{m|enm|Israel}}, from {{etyl|ang|en}}, borrowed from {{etyl|la|en}} {{m|la|Israel}}, from {{etyl|grc|en}} {{m|grc|Ἰσραήλ}}, from {{etyl|he|en}} {{term|יִשְׂרָאֵל||Israel|lang=he|tr=yisra'él}}.<ref>{{R:Dictionary.com}}</ref><ref>{{R:MWO}}</ref> In {{RQ:Tanach|1|32|29}}, it is said to derive from {{m|he|[[שרה|יִשְׂרֶה]] [[אֵל]]||he wrestled [with] God|tr=yisré 'él}}. 
+From {{etyl|enm|en}} {{m|enm|Israel}}, from {{etyl|ang|en}}, borrowed from {{etyl|la|en}} {{m|la|Israel}}, from {{etyl|grc|en}} {{m|grc|Ἰσραήλ}}, from {{etyl|he|en}} {{term|יִשְׂרָאֵל||Israel|lang=he|tr=yisra'él}},<ref>{{R:Dictionary.com}}</ref><ref>{{R:MWO}}</ref> from the name {{m|he|[[שרה|יִשְׂרֶה]] [[אֵל]]|tr=yisré 'él}} given to [[Jacob]]in {{RQ:Tanach|1|32|29}}, after which his descendants came to be known as [[Israelite]]s and their land as the "kingdom/land of Israel". The name, already attested in {{etyl|xeb|-}} and {{etyl|uga|-}} texts as a common name,<ref>Michael G. Hasel, ''Domination and Resistance: Egyptian Military Activity in the Southern Levant'' (Brill, 1998)</ref> has been variously translated as "he wrestles with God", "he prevails with God",<ref>James P. Boyd, ''Bible dictionary'' (Ottenheimer Publishers, 1958)</ref> or "God rules" (possibly from the same root as {{m|he|ש־ר־ה}}/{{m|he|ש־ר־ר}} as {{m|he|שָׂרָה||Sarah}}).<ref>Victor P. Hamilton, ''The Book of Genesis: Chapters 18–50'' (NICOT, Grand Rapids: Eerdmans, 1995)</ref>
 
 [[:File:YsyriAr.gif|Line 27]] of the [[w:Merneptah Stele|Merneptah Stele]] (from about 1200 {{B.C.E.}}) is thought to contain the earliest attestation of the name ''Israel'' in any language, {{etyl|egy|-}} {{m|egy|ysrj3r}} (although alternative readings have been proposed, such as ''[[Jezreel]]''):
 : <hiero>i-i-z:Z4:r-i-A-r:Z1*T14-A1*B1:Z2</hiero>
