--- a/en/t/thunder.7222.wikitext
+++ b/en/t/thunder.7222.wikitext
@@ -61,6 +61,7 @@ From {{etyl|ang|en}} {{term|þunor|lang=ang}}, from {{etyl|gem-pro|en}} {{m|gem-
 * Chamicuro: {{t|ccc|tswali}}
 * Chechen: {{t|ce|къовкъа}}
 * Chinese:
+*: Cantonese: {{t|yue|雷|tr=leoi4|sc=Hani}}, {{t|yue|雷聲|sc=Hani}}, {{t|yue|雷声|tr=leoi4 sing1|sc=Hani}}, {{t|yue|雷鳴|sc=Hani}}, {{t|yue|雷鸣|tr=leoi4 ming4|sc=Hani}}
 *: Mandarin: {{t+|cmn|雷|tr=léi|sc=Hani}}, {{t|cmn|雷聲|sc=Hani}}, {{t+|cmn|雷声|tr=léishēng|sc=Hani}}, {{t+|cmn|雷鳴|sc=Hani}}, {{t+|cmn|雷鸣|tr=léimíng|sc=Hani}}
 * Czech: {{t+|cs|hrom|m}}, {{t|cs|zahřmění|n}}
 * Dalmatian: {{t|dlm|tun|m}}
