--- a/en/c/creep.6841.wikitext
+++ b/en/c/creep.6841.wikitext
@@ -96,7 +96,7 @@ From {{etyl|enm|en}} {{term|crepen|lang=enm}}, from {{etyl|ang|en}} {{m|ang|crē
 {{trans-top|to move in a stealthy or secret manner}}
 * Finnish: {{t|fi|hiipiä}}, {{t|fi|hivuttautua}}
 {{trans-mid}}
-* Maori: {{t|mi|whakameto}}
+* Maori: {{t|mi|whakameto}}, {{t|mi|whakamomoka}}
 * Russian: {{t+|ru|кра́сться|impf}}, {{t+|ru|подкра́дываться|impf}}
 {{trans-bottom}}
 
