--- a/en/e/et cetera.7211.wikitext
+++ b/en/e/et cetera.7211.wikitext
@@ -67,7 +67,7 @@ From {{etyl|la|en}} {{term|et cētera||lang=la|and the rest" or "and so forth}}.
 * Latin: {{t+|la|et cetera}}
 * Latvian: {{t|lv|un tā tālāk}}, {{t|lv|utt.}}
 * Lithuanian: {{t|lt|ir taip toliau}}, {{t|lt|ir t.t.}}
-* Macedonian: {{t|mk|и така натаму|tr=i táka nátamu}} ({{t|mk|итн.|tr=itn.}})
+* Macedonian: {{t|mk|и та́ка на́таму}} ({{t|mk|итн.}})
 * Malay: {{t|ms|dan lain-lain}}
 * Norwegian:
 *: Bokmål: {{t|no|og så videre}}, {{t+|no|osv.}}, {{t|no|et cetera}}, {{t+|no|etc.}}
