--- a/en/傘/傘.11179.wikitext
+++ b/en/傘/傘.11179.wikitext
@@ -12,6 +12,9 @@
 ==Chinese==
 {{zh-forms|s=伞}}
 
+===Alternative forms===
+* {{zh-l|繖}}
+
 ===Pronunciation===
 {{zh-pron
 |m=sǎn
@@ -22,7 +25,7 @@
 |ma=y
 |mc=y
 |oc=y
-|cat=n
+|cat=n,adj
 }}
 
 ===Definitions===
@@ -33,6 +36,10 @@
 #: {{zh-usex|跳傘|parachute}}
 #: {{zh-usex|降落傘|parachute}}
 #: {{zh-usex|傘兵|paratrooper; parachuter}}
+# resembling an umbrella
+
+===References===
+* {{R:twedu|A00224}}
 
 ----
 
