t+ru:[[то есть]] t-balance ([[WT:EDIT|Assisted]]) <i.e.#33776775>

--- a/en/i/i_e_.7209.wikitext
+++ b/en/i/i_e_.7209.wikitext
@@ -45,8 +45,8 @@ i.e. differs from [[viz.]] in that what follows merely restates what was said in
 * Icelandic: {{t+|is|þ.e.}} <!-- [[það]] [[er]] -->, {{t+|is|þ.e.a.s.}} <!-- [[það]] [[er]] [[að]] [[segja]] -->
 * Irish: {{t|ga|.i.}}<!-- {{qualifier|{{t|ga|eadhon}}}} -->
 * Italian: {{t+|it|cioè}}
-* Japanese: {{t|ja|すなわち|tr=sunawachi|sc=Jpan}}
 {{trans-mid}}
+* Japanese: {{t|ja|すなわち|tr=sunawachi|sc=Jpan}}
 * Lojban: {{t|jbo|va'i}}
 * Malay: {{t|ms|iaitu}}, {{t|ms|yakni}}
 * Malayalam: {{t|ml|അതായത്|sc=Mlym}}
@@ -56,7 +56,7 @@ i.e. differs from [[viz.]] in that what follows merely restates what was said in
 * Persian: {{t+|fa|یعنی|tr=ya'ni|sc=fa-Arab}}
 * Polish: {{t+|pl|tzn.}}, {{t+|pl|tj.}}, {{t+|pl|czyli}}
 * Portuguese: {{t+|pt|isto é}}, {{t+|pt|ou seja}}
-* Russian: {{t+|ru|т. е.}}
+* Russian: {{t+|ru|т. е.}}, {{t+|ru|то́ есть|sc=Cyrl}}
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|тј.|sc=Cyrl}} ({{l|sh|то}} {{l|sh|јест}})
 *: Roman: {{t|sh|tj.}} ({{l|sh|tȏ}} {{l|sh|jȅst}})
