--- a/en/f/flesh.6883.wikitext
+++ b/en/f/flesh.6883.wikitext
@@ -186,10 +186,14 @@ From {{etyl|enm|en}} {{m|enm|flesh}}, from {{etyl|ang|en}} {{m|ang|flǣsc}}, fro
 {{trans-top|colour}}
 * Bulgarian: {{t+|bg|телесен|sc=Cyrl}}
 * Catalan: {{t+|ca|carn|f}}
+* Chinese:
+*: Cantonese: {{t|yue|肉色|tr=juk6 sik1}}
+*: Mandarin: {{t+|cmn|肉色|tr=ròusè}}
+*: Min Nan: {{t+|nan|肉色|tr=bah-sek}}
 * Danish: {{t|da|kødfarve}}
+{{trans-mid}}
 * Dutch: {{t|nl|mensenkleur|f}}
 * French: {{t+|fr|carnation|f}}, {{t+|fr|chair|f}}
-{{trans-mid}}
 * German: {{t|de|Fleischfarbe|f}}
 * Japanese: {{t|ja|肌色|tr=hadairo|sc=Jpan}}
 * Korean: {{t|ko|살색|sc=Kore}}
