t+hak:[[肉色]] ([[WT:EDIT|Assisted]]) <flesh#33803582>

--- a/en/f/flesh.6883.wikitext
+++ b/en/f/flesh.6883.wikitext
@@ -188,6 +188,7 @@ From {{etyl|enm|en}} {{m|enm|flesh}}, from {{etyl|ang|en}} {{m|ang|flǣsc}}, fro
 * Catalan: {{t+|ca|carn|f}}
 * Chinese:
 *: Cantonese: {{t|yue|肉色|tr=juk6 sik1}}
+*: Hakka: {{t|hak|肉色|tr=ngiuk-set}}
 *: Mandarin: {{t+|cmn|肉色|tr=ròusè}}
 *: Min Nan: {{t+|nan|肉色|tr=bah-sek}}
 * Danish: {{t|da|kødfarve}}
