--- a/en/旧/旧.16911.wikitext
+++ b/en/旧/旧.16911.wikitext
@@ -34,27 +34,28 @@ In current form, calligraphical rendering of 臼.
 * {{ja-readings|goon=[[ぐ]] (gu)|kanon=[[きゅう]] (kyū)|kanyoon=[[く]] (ku)|kun=[[ふるい]] ([[旧い]], furui), [[もと]] (moto)}}
 
 ====Compounds====
-{{top2}}
-* [[旧式]] (''kyūshiki''): old type
-* [[旧制]] (''kyūsei''): old system
-* [[旧姓]] (''kyūsei''): former surname
-* [[旧態]] (''kyūtai''): old state of affairs
-* [[旧派]] (''kyūha''): the old school
-* [[旧約]] (''kyūyaku''): [[Old Testament]]
-* [[旧来]] (''kyūrai''): traditional
-* [[旧暦]] (''kyūreki''): Japan's old lunisolar calendar;
-* [[旧居]] (''kyūkyo''): former residence
-{{mid2}}
-* [[旧株]] (''kyūkabu, ''kyūshu''): old stock
-* [[旧弊]] (''kyūhei''): old evil
-* [[旧軍人]] (''kyūgunjin''): ex-soldier
-* [[旧正月]] (''kyūshōgatsu''): lunisolar New Year
-* [[旧世界]] (''kyūsekai''): the old world
-* [[旧保守]] (''kyūhoshu''): [[paleoconservative]]
-* [[懐旧]] (''kaikyū''): nostalgia
-* [[復旧]] (''fukkyū''): recover
-* [[旧に復する]] (''kyū ni fukusuru''): be restored to a former state
-{{bottom}}
+{{der-top|Compounds}}
+* {{ja-r|旧式|きゅうしき}}: old type
+* {{ja-r|旧制|きゅうせい}}: old system
+* {{ja-r|旧姓|きゅうせい}}: former surname
+* {{ja-r|旧態|きゅうたい}}: old state of affairs
+* {{ja-r|旧派|きゅうは}}: the old school
+* {{ja-r|旧約|きゅうやく}}: [[Old Testament]]
+* {{ja-r|旧来|きゅうらい}}: traditional
+* {{ja-r|旧里|きゅうり}}: [[hometown]]
+* {{ja-r|旧暦|きゅうれき}}: Japan's old lunisolar calendar;
+* {{ja-r|旧居|きゅうきょ}}: former residence
+{{der-mid}}
+* {{ja-r|旧株|きゅうかぶ}}: old stock
+* {{ja-r|旧弊|きゅうへい}}: old evil
+* {{ja-r|旧軍人|きゅうぐんじん}}: ex-soldier
+* {{ja-r|旧正月|きゅうしょうがつ}}: lunisolar New Year
+* {{ja-r|旧世界|きゅうせかい}}: the old world
+* {{ja-r|旧保守|きゅうほしゅ}}: [[paleoconservative]]
+* {{ja-r|懐旧|かいきゅう}}: nostalgia
+* {{ja-r|復旧|ふっきゅう}}: recover
+* {{ja-r|旧に復する|きゅう に ふくする}}: be restored to a former state
+{{der-bottom}}
 
 ===Noun===
 {{ja-noun|きゅう}}
