--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -275,7 +275,7 @@ From {{etyl|enm|en}} {{term|counten|lang=enm}}, from {{etyl|xno|en}} {{term|cont
 
 ===Etymology 2===
 {{wikipedia}}
-From {{etyl|fro|en}} {{term|comte|lang=fro}} and {{term|conte|lang=fro||count}}, from {{etyl|la|en}} {{term|comes|lang=la||[[companion]]}} in the sense of "noble fighting alongside the king".
+From {{etyl|fro|en}} {{term|comte|lang=fro}} and {{term|conte|lang=fro||count}}, from {{etyl|la|en}} {{term|comes|lang=la||[[companion]]}} (more specifically derived from its form ''comitem'') in the sense of "noble fighting alongside the king".
 
 ====Noun====
 {{en-noun}}
