--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -85,7 +85,7 @@
 * French: {{t+|fr|brique}}
 * Friulian: {{t|fur|modon}}
 * Galician: {{t+|gl|ladrillo|m}}
-* Georgian: {{t|ka|აგჟრი}}, {{t|ka|აგური}}
+* Georgian: {{t|ka|აგური}}
 * German: {{t+|de|Backstein}}, {{t+|de|Ziegel|m}}
 * Greek: {{t+|el|τούβλο|n}}
 * Gujarati: {{t|gu|ઈંટ|f|tr=īṇṭa|sc=Gujr}}
