--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -320,7 +320,8 @@ The past tense and past participle is ''cost'' in the sense of "this computer ''
 ==Old English==
 
 ===Etymology===
-{{etyl|gem-pro|ang}} {{m|gem-pro|*kust-}}, from {{etyl|ine-pro|ang}} {{m|ine-pro|*ǵews-||to choose}}. Akin to {{etyl|osx|-}} {{m|osx|kostōn||to try, tempt}}, {{etyl|goh|-}} {{m|goh|kostōn||to taste, test, try by tasting}} ({{etyl|de|-}} {{m|de|kosten}}), {{etyl|is|-}} {{m|is|kosta||to try, tempt}}, {{etyl|got|-}} {{m|got|𐌺𐌿𐍃𐍄𐌿𐍃||test}}, {{etyl|ang|-}} {{m|ang|cystan||to spend, get the value of, procure}}, {{etyl|ang|-}} {{m|ang|cyst||proof, test, trial; choice}}, {{m|ang|ċēosan||to choose}}. More at [[choose]].
+{{PIE root|ang|ǵews}}
+From {{etyl|gem-pro|ang}} {{m|gem-pro|*kust-}}, from {{etyl|ine-pro|ang}} {{m|ine-pro|*ǵews-||to choose}}. Akin to {{etyl|osx|-}} {{m|osx|kostōn||to try, tempt}}, {{etyl|goh|-}} {{m|goh|kostōn||to taste, test, try by tasting}} ({{etyl|de|-}} {{m|de|kosten}}), {{etyl|is|-}} {{m|is|kosta||to try, tempt}}, {{etyl|got|-}} {{m|got|𐌺𐌿𐍃𐍄𐌿𐍃||test}}, {{etyl|ang|-}} {{m|ang|cystan||to spend, get the value of, procure}}, {{etyl|ang|-}} {{m|ang|cyst||proof, test, trial; choice}}, {{m|ang|ċēosan||to choose}}.
 
 ===Pronunciation===
 * {{IPA|/ˈkost/|lang=ang}}
