--- a/en/明/明.16950.wikitext
+++ b/en/明/明.16950.wikitext
@@ -18,7 +18,7 @@
 * {{zh-l|朙}}
 
 ===Etymology===
-The traditional etymology follows the modern form in finding {{liushu|ic}}: {{term|日||sun|sc=Hani}} + {{term|月||moon|sc=Hani}}. However, the etymology may be somewhat less simple, as alleged older forms of the character show the moon shining through a window ([[朙]]).
+The traditional etymology follows the modern form in finding {{liushu|ic}}: {{m|zh|日||sun|sc=Hani}} + {{m|zh|月||moon|sc=Hani}}. However, the etymology may be somewhat less simple, as alleged older forms of the character show the moon shining through a window ([[朙]]).
 
 ===Pronunciation===
 {{zh-pron
