/* Pronunciation */ expand <port#33906109>

--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -3,7 +3,10 @@
 {{wikipedia|dab=Port (disambiguation)|Port}}
 
 ===Pronunciation===
-* {{IPA|/poəɹt/|/pɔːɹt/|/pɔːt/|lang=en}}
+* {{a|GenAm}} {{IPA|/pɔɹt/|lang=en}}
+* {{a|RP}} {{IPA|/pɔːt/|lang=en}}
+* {{a|rhotic|horse-hoarse}} {{IPA|/po(ː)ɹt/|lang=en}}
+* {{a|nonrhotic|horse-hoarse}} {{IPA|/poət/|lang=en}}
 * {{audio|en-uk-a port.ogg|Audio - 'a port' (UK)|lang=en}}
 * {{audio|en-us-port.ogg|Audio (US)|lang=en}}
 * {{rhymes|ɔː(ɹ)t|lang=en}}
