t+sw:[[skati]] ([[WT:EDIT|Assisted]]) <skirt#33914166>

--- a/en/s/skirt.7203.wikitext
+++ b/en/s/skirt.7203.wikitext
@@ -116,6 +116,7 @@ From {{etyl|non|en}} {{term|skyrta|lang=non}}, from {{etyl|gem-pro|en}} {{m|gem-
 * Slovak: {{t|sk|sukňa|f}}
 * Slovene: {{t+|sl|krilo|n}}
 * Spanish: {{t+|es|falda|f}}, {{t+|es|enaguas|f-p}} {{qualifier|Costa Rica|Nicaragua}}, {{t+|es|pollera|f}} {{qualifier|Argentina|Chile|Paraguay|Uruguay}}, {{t|es|saya|f}} {{qualifier|Cuba}}
+* Swahili: {{t|sw|skati}}
 * Swedish: {{t+|sv|kjol|c}}
 * Taos: {{t|twf|yúwolaną}}
 * Telugu: {{t+|te|పరికిణి|tr=parikiNi}}
