--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -168,6 +168,7 @@ From {{etyl|enm|en}} {{m|enm|Israel}}, from {{etyl|ang|en}}, borrowed from {{ety
 * Hebrew: {{t+|he|יִשְׂרָאֵל|m|tr=yisra'el}}
 * Judeo-Arabic: {{t|jrb|אסראיל|m|tr=ʾisrāʾīl}}
 * Maore Comorian: {{t|swb|Israila}}
+* Portuguese: {{t+|pt|Israel|m}}
 * Romanian: {{t+|ro|Israel|m}}
 * Russian: {{t+|ru|Изра́иль|m}}, {{t+|ru|Израи́л|m}}, {{t|ru|Исраэ́ль|m}}
 * Spanish: {{t+|es|Israel|m}}
@@ -179,6 +180,7 @@ From {{etyl|enm|en}} {{m|enm|Israel}}, from {{etyl|ang|en}}, borrowed from {{ety
 * Hebrew: {{t+|he|יִשְׂרָאֵל|m|tr=yisra'él}}
 {{trans-mid}}
 * Judeo-Arabic: {{t|jrb|אסראיל|m|tr=ʾisrāʾīl}}
+* Portuguese: {{t+|pt|Israel|m}}
 * Yiddish: {{t|yi|ישׂראל|m|tr=yisroel|sc=Hebr}}
 {{trans-bottom}}
 
