--- a/en/垔/垔.13080.wikitext
+++ b/en/垔/垔.13080.wikitext
@@ -32,7 +32,9 @@
 ===Kanji===
 {{ja-kanji|grade=|rs=土06}}
 
-# {{defn|lang=ja|sort=土06}}
+# to restrain
+# to dam a stream and change its direction
+# [[mound]]
 
 ====Readings====
 * {{ja-readings|on=[[おう]] (ō), [[じゅ]] (ju), [[とう]] (tō), [[ず]] (zu)|kun=[[ふさぐ]] (fusagu)}}
