--- a/en/垔/垔.13080.wikitext
+++ b/en/垔/垔.13080.wikitext
@@ -46,7 +46,9 @@
 ===Hanja===
 {{ko-hanja|hangeul=인|eumhun=|rv=in|mr=in|y=in}}
 
-# {{defn|lang=ko|sort=土06}}
+# [[stop up]], [[close]], [[block]]
+# [[bury]], get buried
+# [[ladder]]
 
 [[fr:垔]]
 [[hu:垔]]
