--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -478,6 +478,9 @@ From {{etyl|fro|fr}} {{m|fro|port}}, from {{etyl|la|fr}} {{term|portus|lang=la}}
 
 ==Icelandic==
 
+===Pronunciation===
+* {{rhymes|ɔr̥t|lang=is}}
+
 ===Noun===
 {{is-noun|n|ports|port}}
 
@@ -533,6 +536,7 @@ From {{etyl|sga|ga}} {{m|sga|port||bank, shore (of river or sea); landing-place,
 {{ga mut cons|p|ort}}
 
 ----
+
 ==Ladin==
 
 ===Etymology===
@@ -544,6 +548,7 @@ From {{etyl|la|lld}} {{m|la|portus}}.
 # [[port]], [[harbour]]
 
 ----
+
 ==Norman==
 
 ===Etymology===
@@ -583,6 +588,7 @@ From late {{etyl|non|nb}} {{term|port|lang=non}} {{g|n}}, {{etyl|gmq-mno|nb}} {{
 * {{R:The Bokmål Dictionary}}
 
 ----
+
 ==Norwegian Nynorsk==
 
 ===Etymology===
@@ -599,6 +605,7 @@ From late {{etyl|non|nn}} {{term|port|lang=non}} {{g|n}}, {{etyl|gmq-mno|nn}} {{
 * {{R:The Nynorsk Dictionary}}
 
 ----
+
 ==Old English==
 
 ===Etymology===
