--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -641,21 +641,13 @@ From {{etyl|la|fro}} {{term|portus|lang=la}}.
 ==Polish==
 
 ===Noun===
-{{pl-noun|m}}
+{{pl-noun|m-in}}
 
 # {{l|en|port}}, [[harbour]] (area for ships)
 # {{l|en|port}}, a town or city containing such a place
 
 ====Declension====
-{{pl-decl-noun
-|port|porty
-|portu|portów
-|portowi|portom
-|port|porty
-|portem|portami
-|porcie|portach
-|porcie|porty
-}}
+{{pl-decl-noun-m-in}}
 
 ====Derived terms====
 * [[portowy]]
