--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -13,7 +13,7 @@
 
 ===Etymology 1===
 [[File:Dubrovnik-port.jpg|right|thumb|The old port of [[Dubrovnik]]]]
-From {{etyl|ang|en}} {{term|port|lang=ang}}, from {{etyl|la|en}} {{term|portus||port, harbour|lang=la}}, from {{etyl|ine-pro|en}} {{m|ine-pro|*pértus||crossing}} ultimately from Sumerian ab-ur, water-city (see India -pur), distantly cognate with {{term|ford|lang=en}}.
+From {{etyl|ang|en}} {{term|port|lang=ang}}, from {{etyl|la|en}} {{term|portus||port, harbour|lang=la}}, from {{etyl|ine-pro|en}} {{m|ine-pro|*pértus||crossing}}, ultimately from Sumerian ab-ur, water-city (see India -pur), distantly cognate with {{term|ford|lang=en}}.
 
 ====Noun====
 {{en-noun}}
