--- a/en/s/skirt.7203.wikitext
+++ b/en/s/skirt.7203.wikitext
@@ -262,6 +262,10 @@ From {{etyl|non|en}} {{term|skyrta|lang=non}}, from {{etyl|gem-pro|en}} {{m|gem-
 *: Roman: {{t+|sh|graničiti|alt=graničiti se}}
 {{trans-bottom}}
 
+{{trans-top|to move around, to avoid the centre}}
+{{trans-mid}}
+{{trans-bottom}}
+
 {{checktrans-top}}
 * Serbo-Croatian: {{t-check|sh|omeđiti}}, {{t-check|sh|ići duž}}
 * Dutch: {{t-check|nl|omzomen}}, {{t-check|nl|omcirkelen}}
